Heading内のエスケープを修正

--- a/kintone-help-astro-poc/src/pages/ja/admin/app_admin/confirm_app_admins.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/app_admin/confirm_app_admins.mdx
@@ -24,7 +24,7 @@ import Wovn from "@/components/Wovn.astro";
 <Slash />共通管理者は、<Wovn>［アプリ管理］</Wovn>画面の<Wovn>［アプリの一覧］</Wovn>で、必要なタイミングで<Wovn>［アプリ管理者数］</Wovn>列を表示させることで、各アプリの設定変更の権限を持つユーザー数を確認できます。  
 設定変更の権限を持つユーザー数が多いアプリを把握し、適切なアクセス権が設定されているか担当者に確認するアクションを取りたいときなどに活用できます。
 
-<Heading id="app_admin_confirm_app_admins_10">&lt;Wovn&gt;［アプリ管理者数］&lt;/Wovn&gt;列に表示されるユーザー数について</Heading>
+<Heading id="app_admin_confirm_app_admins_10"><Wovn>［アプリ管理者数］</Wovn>列に表示されるユーザー数について</Heading>
 
 アプリの設定変更の権限が付与されているユーザー数が表示されます。具体的には、次のすべての条件を満たすユーザー数が表示されます。
 
@@ -36,7 +36,7 @@ import Wovn from "@/components/Wovn.astro";
 
 なお、<Slash />共通管理者は、アクセス権の設定にかかわらず、すべてのアプリの設定を変更できます。<Slash />共通管理者であることが理由でアプリの設定を変更できるユーザーは、<Wovn>［アプリ管理者数］</Wovn>のカウント数には含まれません。
 
-<Heading id="app_admin_confirm_app_admins_20">&lt;Wovn&gt;［アプリ管理者数］&lt;/Wovn&gt;列の表示とデータ取得に関する注意点</Heading>
+<Heading id="app_admin_confirm_app_admins_20"><Wovn>［アプリ管理者数］</Wovn>列の表示とデータ取得に関する注意点</Heading>
 
 <Wovn>［アプリ管理者数］</Wovn>列の表示とデータ取得に関しては、いくつか注意点があります。
 
@@ -47,7 +47,7 @@ import Wovn from "@/components/Wovn.astro";
   * 1日のデータ取得回数の上限に達した場合、ダイアログには最後にデータを取得した日時が表示されます。その場合は、<Wovn>［手動更新データを取得］</Wovn>ダイアログで<Wovn>［表示する］</Wovn>ボタンをクリックすると、最後に取得した日時でのデータが表示されます。
 * <Wovn>［アプリ管理者数］</Wovn>列を表示した状態で、Webブラウザーを再読み込みすると、<Wovn>［アプリ管理者数］</Wovn>列が表示されなくなります。再び表示するには、<Wovn>［手動更新データを取得］</Wovn>ボタンをクリックしてデータを再度取得してください。
 
-<Heading id="app_admin_confirm_app_admins_30">&lt;Wovn&gt;［アプリ管理者数］&lt;/Wovn&gt;列を表示する</Heading>
+<Heading id="app_admin_confirm_app_admins_30"><Wovn>［アプリ管理者数］</Wovn>列を表示する</Heading>
 
 1. <Kintone />の画面上部にある<Wovn>［設定］</Wovn>アイコン（歯車の形）をクリックし、<Wovn>［アプリ管理］</Wovn>をクリックします。  
    <Img src="/k/kintone/img-ja/restart_creating_app_img02.png" alt="スクリーンショット：画面上部の［設定］アイコンと［アプリ管理］が強調されている" />
@@ -60,7 +60,7 @@ import Wovn from "@/components/Wovn.astro";
    <Wovn>［アプリの一覧］</Wovn>に<Wovn>［アプリ管理者数］</Wovn>列が追加され、各アプリの設定変更の権限を持つユーザー数が表示されます。
    <Img src="/k/kintone/img-ja/confirm_app_admins_01.png" alt="スクリーンショット：［アプリ管理］画面の［アプリの一覧］で［アプリ管理者数］列が強調されている" />
 
-<Heading id="app_admin_confirm_app_admins_40">&lt;Wovn&gt;［アプリ管理者数］&lt;/Wovn&gt;のデータをCSV形式でダウンロードする</Heading>
+<Heading id="app_admin_confirm_app_admins_40"><Wovn>［アプリ管理者数］</Wovn>のデータをCSV形式でダウンロードする</Heading>
 
 1. <Wovn>［アプリ管理］</Wovn>画面で、<Wovn>［アプリ一覧］</Wovn>に<Wovn>［アプリ管理者数］</Wovn>列を表示します。  
 <Wovn>［アプリ管理者数］</Wovn>列を表示する手順は、次の項目を参照してください。  
