--- a/kintone-help-astro-poc/src/pages/ja/admin/app_admin/confirm_app_list.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/app_admin/confirm_app_list.mdx
@@ -31,7 +31,7 @@ import Wovn from "@/components/Wovn.astro";
 <Wovn>［アプリ管理］</Wovn>画面の開きかたは、次のページを参照してください。  
 [［アプリ管理］画面を開く](/k/ja/id/04015.html#app_admin_manage_app_10)
 
-<Heading id="app_admin_confirm_app_list_10">&lt;Wovn&gt;［アプリの一覧］&lt;/Wovn&gt;の項目説明</Heading>
+<Heading id="app_admin_confirm_app_list_10"><Wovn>［アプリの一覧］</Wovn>の項目説明</Heading>
 
 <Wovn>［アプリの一覧］</Wovn>の各項目について説明します。  
 アプリの一覧に表示される項目は、お使いの環境やご契約のコースによって異なります。
@@ -245,7 +245,7 @@ import Wovn from "@/components/Wovn.astro";
 
 作成途中だった自分のアプリを見つけて設定を再開したいときや、自分が作成したアプリを整理・削除したいときなどに活用できます。
 
-<Heading id="app_admin_confirm_app_list_30">&lt;Wovn&gt;［手動更新データを取得］&lt;/Wovn&gt;ボタンについて</Heading>
+<Heading id="app_admin_confirm_app_list_30"><Wovn>［手動更新データを取得］</Wovn>ボタンについて</Heading>
 
 <Warning>
 <Wovn>［手動更新データを取得］</Wovn>ボタンは、アップデートオプションで<Wovn>［検討中の新機能］</Wovn>の<Wovn>［アプリ管理画面でアプリ管理者数を確認できる機能］</Wovn>を有効化している場合に、<Slash />共通管理者にだけ表示されます。詳細は、次のページを参照してください。  
