--- a/kintone-help-astro-poc/src/pages/ja/admin/app_admin/manage_app.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/app_admin/manage_app.mdx
@@ -45,14 +45,14 @@ import Wovn from "@/components/Wovn.astro";
 
 以下に、<Wovn>［アプリ管理］</Wovn>画面の開きかたを説明します。
 
-<Heading id="app_admin_manage_app_10">&lt;Wovn&gt;［アプリ管理］&lt;/Wovn&gt;画面を開く</Heading>
+<Heading id="app_admin_manage_app_10"><Wovn>［アプリ管理］</Wovn>画面を開く</Heading>
 
 <Wovn>［アプリ管理］</Wovn>画面にアクセスするには、<Kintone />の画面上部の歯車の形をした<Wovn>［設定］</Wovn>アイコンをクリックし、<Wovn>［アプリ管理］</Wovn>をクリックします。  
 <Img src="/k/kintone/img-ja/manage_apps_img01.png" alt="スクリーンショット：［設定］アイコンから表示" />
 
 <Wovn>［アプリ管理］</Wovn>画面が開きます。
 
-<Heading id="app_admin_manage_app_20">&lt;Wovn&gt;［&lt;Kintone /&gt;］&lt;/Wovn&gt;から&lt;Wovn&gt;［アプリ管理］&lt;/Wovn&gt;画面を開く</Heading>
+<Heading id="app_admin_manage_app_20"><Wovn>［<Kintone />］</Wovn>から<Wovn>［アプリ管理］</Wovn>画面を開く</Heading>
 
 <Slash />共通管理者と<Kintone />のシステム管理者は、<Wovn>［<Kintone />システム管理］</Wovn>からも<Wovn>［アプリ管理］</Wovn>画面を開くことができます。
 
