--- a/kintone-help-astro-poc/src/pages/ja/admin/appgroup/appgroup_rights.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/appgroup/appgroup_rights.mdx
@@ -26,7 +26,7 @@ import Wovn from "@/components/Wovn.astro";
 
 <Wovn>［アプリの作成］</Wovn>と<Wovn>［アプリの管理／使用／削除］</Wovn>の詳細を説明します。
 
-<Heading level={3} id="appgroup_appgroup_rights_1010">&lt;Wovn&gt;［アプリの作成］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="appgroup_appgroup_rights_1010"><Wovn>［アプリの作成］</Wovn></Heading>
 
 アプリグループ内にアプリを作成する権限です。  
 アプリグループ内にアプリを作成するには、この権限設定だけではなく、以下のアクセス権限が有効になっている必要があります。
@@ -41,7 +41,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Warning>
 
-<Heading level={3} id="appgroup_appgroup_rights_1020">&lt;Wovn&gt;［アプリの管理／使用／削除］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="appgroup_appgroup_rights_1020"><Wovn>［アプリの管理／使用／削除］</Wovn></Heading>
 
 次の操作が有効になる権限です。
 
