--- a/kintone-help-astro-poc/src/pages/ja/admin/limitation/limit.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/limitation/limit.mdx
@@ -33,7 +33,7 @@ import Wovn from "@/components/Wovn.astro";
 言語、英数字、および記号に関する注意事項は、次のページを参照してください。  
 [検索キーワード入力時の注意事項](/k/ja/id/040689.html#search_search_details_60)
 
-<Heading level={3} id="limitation_limit_1030">&lt;Kintone /&gt;全体のカスタマイズ</Heading>
+<Heading level={3} id="limitation_limit_1030"><Kintone />全体のカスタマイズ</Heading>
 
 1つのアプリにつき、JavaScriptファイル、CSSファイルは、PC用とスマートフォン用でそれぞれ30個までです。  
 1つのファイルあたりのファイルサイズの上限は、20MBまでです。
