--- a/kintone-help-astro-poc/src/pages/ja/admin/new_feature/target_features.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/new_feature/target_features.mdx
@@ -27,7 +27,7 @@ import Slash from "@/components/Slash.astro";
 
 <Heading id="new_feature_target_features_10">「新機能の無効化」の対象機能</Heading>
 
-<Heading level={3} id="new_feature_target_features_3022">&lt;Kintone /&gt;システム管理者がアプリ管理者を制限できる機能</Heading>
+<Heading level={3} id="new_feature_target_features_3022"><Kintone />システム管理者がアプリ管理者を制限できる機能</Heading>
 
 <Kintone />システム管理の「アクセス権」画面で、アプリの設定を変更できるアプリ管理者を指定できる機能です。  
 <Kintone />システム管理者が「アプリの管理」を許可していないユーザーは、各アプリの設定にかかわらず、アプリの設定を変更できません。
@@ -43,7 +43,7 @@ import Slash from "@/components/Slash.astro";
 
 「新機能の無効化」でこの項目にチェックを入れると、この新機能が無効になります。<b>この新機能を無効化できるのは、2025年11月の定期アップデートが実施される前までです。</b>それ以降は無効化が解除されます。
 
-<Heading level={3} id="new_feature_target_features_30233">&lt;Kintone /&gt; AI</Heading>
+<Heading level={3} id="new_feature_target_features_30233"><Kintone /> AI</Heading>
 
 開発中のAI機能をいち早くお試しいただける「<Kintone /> AIラボ」の提供を開始します。  
 AI技術を活用した、さまざまな機能をご利用いただくには、「アップデートオプション」で、この項目を有効に設定する必要があります。  
@@ -86,7 +86,7 @@ AI技術を活用した、さまざまな機能をご利用いただくには、
 * アカウント設定の「言語」で「Webブラウザーの設定に従う」が選択されている
 * Webブラウザーの言語設定で、オーストラリア英語が選択されている
 
-<Heading level={3} id="new_feature_target_features_4075">&lt;Kintone /&gt;システム管理のデザイン改善：「ヘッダーの色」画面のデザイン・レイアウト変更</Heading>
+<Heading level={3} id="new_feature_target_features_4075"><Kintone />システム管理のデザイン改善：「ヘッダーの色」画面のデザイン・レイアウト変更</Heading>
 
 <Kintone />システム管理画面で、UIパーツやレイアウトのデザインを変更する機能です。  
 「検討中の新機能」でこの項目にチェックを入れると、この新機能が有効になります。  
