--- a/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/admin_type.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/admin_type.mdx
@@ -34,9 +34,9 @@ import Wovn from "@/components/Wovn.astro";
 
 ここでは、各管理者ができることや、管理者の設定方法などについて説明しています。
 
-<Heading id="permission_admin_permissions_concept_10">&lt;Slash /&gt;共通管理者</Heading>
+<Heading id="permission_admin_permissions_concept_10"><Slash />共通管理者</Heading>
 
-<Heading level={3} id="permission_admin_permissions_concept_1010">&lt;Slash /&gt;共通管理者ができること</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_1010"><Slash />共通管理者ができること</Heading>
 
 <Enabled regions={["JP", "CN"]}>
 ユーザー情報やセキュリティ設定など、<Slash />の各サービスで共通している項目を一元管理できます。
@@ -61,7 +61,7 @@ import Wovn from "@/components/Wovn.astro";
 * ログイン時のセキュリティやアクセス制限の設定
 * OAuthを使った外部サービス連携の設定
 
-<Heading level={3} id="permission_admin_permissions_concept_1020">&lt;SlashUi /&gt;の開きかた</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_1020"><SlashUi />の開きかた</Heading>
 
 <Kintone />の画面上部の歯車の形をした<Wovn>［設定］</Wovn>アイコンをクリックし、<Wovn>［<SlashUi />］</Wovn>をクリックします。
 
@@ -73,15 +73,15 @@ import Wovn from "@/components/Wovn.astro";
 <Img src="/k/kintone/img-ja/admin_type_eng01.png" alt="スクリーンショット：{{&lt; slash_ui &gt;}}をクリック" />
 </Enabled>
 
-<Heading level={3} id="permission_admin_permissions_concept_1030">&lt;Slash /&gt;共通管理者の確認方法</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_1030"><Slash />共通管理者の確認方法</Heading>
 
 <SlashUi />の<Wovn>［管理者の設定］</Wovn>で、<Wovn>［<Slash />共通管理者］</Wovn>欄に追加されているユーザーが、<Slash />共通管理者です。  
 必要に応じて管理者を変更できます。詳細については、次のページを参照してください。  
 [<Slash />共通管理者の設定](/general/ja/id/0208.html)
 
-<Heading id="permission_admin_permissions_concept_20">&lt;Kintone /&gt;システム管理者</Heading>
+<Heading id="permission_admin_permissions_concept_20"><Kintone />システム管理者</Heading>
 
-<Heading level={3} id="permission_admin_permissions_concept_2010">&lt;Kintone /&gt;システム管理者ができること</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_2010"><Kintone />システム管理者ができること</Heading>
 
 <Kintone />全体に関わる設定を管理できます。  
 
@@ -96,7 +96,7 @@ import Wovn from "@/components/Wovn.astro";
 * お知らせ掲示板の編集
 * ポータルの設定
 
-<Heading level={3} id="permission_admin_permissions_concept_2020">&lt;Kintone /&gt;システム管理者が設定できるアクセス権</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_2020"><Kintone />システム管理者が設定できるアクセス権</Heading>
 
 * システムの管理権限
 * アプリの作成権限
@@ -105,7 +105,7 @@ import Wovn from "@/components/Wovn.astro";
 * ゲストスペースの作成権限
 * アプリグループの管理権限、閲覧権限
 
-<Heading level={3} id="permission_admin_permissions_concept_2030">&lt;Wovn&gt;［&lt;Kintone /&gt;システム管理］&lt;/Wovn&gt;画面の開きかた</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_2030"><Wovn>［<Kintone />システム管理］</Wovn>画面の開きかた</Heading>
 
 <Kintone />の画面上部の歯車の形をした<Wovn>［設定］</Wovn>アイコンをクリックし、<Wovn>［<Kintone />システム管理］</Wovn>をクリックします。
 
@@ -117,7 +117,7 @@ import Wovn from "@/components/Wovn.astro";
 <Img src="/k/kintone/img-ja/admin_type_eng02.png" alt="スクリーンショット：［{{&lt; kintone &gt;}}システム管理］をクリック" />
 </Enabled>
 
-<Heading level={3} id="permission_admin_permissions_concept_2040">&lt;Kintone /&gt;システム管理者の確認方法</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_2040"><Kintone />システム管理者の確認方法</Heading>
 
 <Wovn>［<Kintone />システム管理］</Wovn>の<Wovn>［アクセス権］</Wovn>画面で、<Wovn>［システムの管理］</Wovn>が有効になっているユーザーが、<Kintone />システム管理者です。  
 必要に応じて管理者を変更できます。詳細については、次のページを参照してください。  
@@ -154,7 +154,7 @@ import Wovn from "@/components/Wovn.astro";
 
 配置したフィールドに対して、閲覧または編集の権限を設定できます。
 
-<Heading level={3} id="permission_admin_permissions_concept_3030">&lt;Wovn&gt;［アプリの設定］&lt;/Wovn&gt;画面の開きかた</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_3030"><Wovn>［アプリの設定］</Wovn>画面の開きかた</Heading>
 
 <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。  
 <Img src="/k/kintone/img-ja/app_setting_change_img01.png" alt="スクリーンショット：[アプリを設定]アイコンが枠線で強調されている" />
@@ -194,17 +194,17 @@ import Wovn from "@/components/Wovn.astro";
 
 <Enabled regions={["JP"]}>
 
-<Heading id="permission_admin_admin_type_50">&lt;Store /&gt;管理者</Heading>
+<Heading id="permission_admin_admin_type_50"><Store />管理者</Heading>
 
-<Heading level={3} id="permission_admin_admin_type_5010">&lt;Store /&gt;管理者ができること</Heading>
+<Heading level={3} id="permission_admin_admin_type_5010"><Store />管理者ができること</Heading>
 
 <Store />で、サービスの発注や契約内容の変更、IPアドレス制限やBasic認証の設定、ドメインの追加などを行います。
 
-<Heading level={3} id="permission_admin_admin_type_5020">&lt;Store /&gt;の開きかた</Heading>
+<Heading level={3} id="permission_admin_admin_type_5020"><Store />の開きかた</Heading>
 
 「[<Store />](https://store.cybozu.com/login?)」にアクセスし、ログインしてください。
 
-<Heading level={3} id="permission_admin_admin_type_5030">&lt;Store /&gt;管理者の確認方法</Heading>
+<Heading level={3} id="permission_admin_admin_type_5030"><Store />管理者の確認方法</Heading>
 
 「[<Store />](https://store.cybozu.com/login?)」の<Wovn>［アカウント管理］</Wovn>で設定されているメンバーが、<Store />の管理者です。  
 必要に応じて管理者を変更できます。詳細については、次のページを参照してください。  
@@ -240,7 +240,7 @@ import Wovn from "@/components/Wovn.astro";
 * ファイル書き出し権限は、アプリ管理者が設定できます。なお、初期設定では、アプリ作成者にのみファイル書き出しが許可されています。設定方法については、次のページを参照してください。  
   [アプリにアクセス権を設定する](/k/ja/id/040589.html)
 
-<Heading level={3} id="permission_admin_permissions_concept_6050">&lt;Kintone /&gt;にプラグインを登録できる人を決めておきたい</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_6050"><Kintone />にプラグインを登録できる人を決めておきたい</Heading>
 
 * プラグインの登録を許可したいユーザーを、<Kintone />システム管理者に設定します。
 * <Kintone />システム管理者は、現在の<Kintone />システム管理者が設定できます。設定方法については、次のページを参照してください。  
@@ -262,7 +262,7 @@ import Wovn from "@/components/Wovn.astro";
 
 <Enabled regions={["JP"]}>
 
-<Heading level={3} id="permission_admin_permissions_concept_6070">契約内容を管理する人と、&lt;Kintone /&gt;の運用を管理する人を分けたい</Heading>
+<Heading level={3} id="permission_admin_permissions_concept_6070">契約内容を管理する人と、<Kintone />の運用を管理する人を分けたい</Heading>
 
 * <Store />管理者（契約内容の管理）と、<Kintone />システム管理者（<Kintone />の運用管理）を別のメンバーに設定します。
 * <Store />管理者は、現在の<Store />管理者が設定できます。また、<Kintone />システム管理者は、現在の<Kintone />システム管理者が設定できます。設定方法については、次のページを参照してください。  
