--- a/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/permissions/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/permissions/index.mdx
@@ -39,7 +39,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading id="permissions_index_10">&lt;Kintone /&gt;システム管理で設定できるアクセス権</Heading>
+<Heading id="permissions_index_10"><Kintone />システム管理で設定できるアクセス権</Heading>
 
 <Heading level={3} id="permissions_index_1020">システムの管理権限</Heading>
 
