--- a/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/permissions/set_permissions.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/permissions/set_permissions.mdx
@@ -19,7 +19,7 @@ import Wovn from "@/components/Wovn.astro";
 各権限の詳細は、次のページを参照ください。  
 [<Kintone />システム管理で設定できるアクセス権](/k/ja/id/04062.html)
 
-<Heading id="permissions_set_permissions_10">&lt;Wovn&gt;［&lt;Kintone /&gt;システム管理］&lt;/Wovn&gt;画面でアクセス権を設定する</Heading>
+<Heading id="permissions_set_permissions_10"><Wovn>［<Kintone />システム管理］</Wovn>画面でアクセス権を設定する</Heading>
 
 初期設定では、すべてのユーザーに対するアクセス権として、<Wovn>［Everyone］</Wovn>の設定行があります。  
 個別のユーザーや組織、グループに対するアクセス権を設定する場合は、<Wovn>［Everyone］</Wovn>の設定行の上に設定行を追加します。
@@ -61,9 +61,9 @@ import Wovn from "@/components/Wovn.astro";
 <Wovn>［<Kintone />システム管理］</Wovn>の<Wovn>［アクセス権］</Wovn>の設定例を紹介します。  
 設定行が複数ある場合、上の行の設定が優先されます。優先したい設定が上になるように優先順位を変更してください。
 
-<Heading level={3} id="permissions_set_permissions_2010">設定例1：&lt;Kintone /&gt;システム管理者を設定する</Heading>
+<Heading level={3} id="permissions_set_permissions_2010">設定例1：<Kintone />システム管理者を設定する</Heading>
 
-<Heading level={4} id="permissions_set_permissions_201010">特定のユーザーだけが&lt;Kintone /&gt;システム管理を操作できるようにする場合</Heading>
+<Heading level={4} id="permissions_set_permissions_201010">特定のユーザーだけが<Kintone />システム管理を操作できるようにする場合</Heading>
 
 <Wovn>［Everyone］</Wovn>の設定行の上に設定行を追加して、次のように設定します。
 
@@ -73,7 +73,7 @@ import Wovn from "@/components/Wovn.astro";
 * <Wovn>［Everyone］</Wovn>
   * <Wovn>［システムの管理］</Wovn>を許可しない
 
-<Heading level={4} id="permissions_set_permissions_201020">特定のユーザー以外のすべてのユーザーが&lt;Kintone /&gt;システム管理を操作できるようにする場合</Heading>
+<Heading level={4} id="permissions_set_permissions_201020">特定のユーザー以外のすべてのユーザーが<Kintone />システム管理を操作できるようにする場合</Heading>
 
 <Wovn>［Everyone］</Wovn>の設定行の上に設定行を追加して、次のように設定します。
 
