--- a/kintone-help-astro-poc/src/pages/ja/admin/user_monitoring.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/user_monitoring.mdx
@@ -54,7 +54,7 @@ import Wovn from "@/components/Wovn.astro";
 
 * 2022年11月の定期アップデートが実施される前までに、本機能を無効にしていた場合は、無効にしていた間のアクセス状況は記録されません。
 
-<Heading id="admin_user_monitoring_20">&lt;Wovn&gt;［ユーザーのアクセス状況］&lt;/Wovn&gt;画面を開く</Heading>
+<Heading id="admin_user_monitoring_20"><Wovn>［ユーザーのアクセス状況］</Wovn>画面を開く</Heading>
 
 <Wovn>［ユーザーのアクセス状況］</Wovn>画面は、<Wovn>［<Kintone />システム管理］</Wovn>画面から開きます。
 
@@ -68,7 +68,7 @@ import Wovn from "@/components/Wovn.astro";
 <Wovn>［ユーザーのアクセス状況］</Wovn>は、<Slash />共通管理権限がある場合のみ表示されます。
 </Note>
 
-<Heading id="admin_user_monitoring_30">&lt;Wovn&gt;［アクセス状況の一覧］&lt;/Wovn&gt;の見かた</Heading>
+<Heading id="admin_user_monitoring_30"><Wovn>［アクセス状況の一覧］</Wovn>の見かた</Heading>
 
 <Wovn>［ユーザーのアクセス状況］</Wovn>画面の<Wovn>［アクセス状況の一覧］</Wovn>の各項目について説明します。
 
@@ -100,7 +100,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading id="admin_user_monitoring_40">&lt;Wovn&gt;［アクセス状況の一覧］&lt;/Wovn&gt;をCSV形式でダウンロードする</Heading>
+<Heading id="admin_user_monitoring_40"><Wovn>［アクセス状況の一覧］</Wovn>をCSV形式でダウンロードする</Heading>
 
 <Wovn>［アクセス状況の一覧］</Wovn>をCSV形式（BOM付きUTF-8）でダウンロードできます。  
 <Wovn>［アクセス状況の一覧］</Wovn>をExcelで開いて分析したい場合や、アカウントを整理した際の記録としてファイルを残しておきたい場合などに活用できます。
@@ -113,7 +113,7 @@ import Wovn from "@/components/Wovn.astro";
 CSVファイルには、<Wovn>［アクセス状況の一覧］</Wovn>の項目に加えて、ユーザーのログイン名や、組織コードも出力されます。  
 <Img src="/k/kintone/img-ja/user_monitoring_img02.png" alt="スクリーンショット：［ユーザーのアクセス状況］画面のCSVダウンロードボタン" />
 
-<Heading level={3} id="admin_user_monitoring_4010">&lt;Wovn&gt;［アクセス状況の一覧］&lt;/Wovn&gt;のCSVファイルに含まれる項目</Heading>
+<Heading level={3} id="admin_user_monitoring_4010"><Wovn>［アクセス状況の一覧］</Wovn>のCSVファイルに含まれる項目</Heading>
 
 ダウンロードした<Wovn>［アクセス状況の一覧］</Wovn>のCSVファイルに含まれる項目について説明します。
 
