--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_manage.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_manage.mdx
@@ -26,7 +26,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading id="ai_search_assist_manage_10">&lt;Wovn&gt;［検索AI管理］&lt;/Wovn&gt;画面の開きかた</Heading>
+<Heading id="ai_search_assist_manage_10"><Wovn>［検索AI管理］</Wovn>画面の開きかた</Heading>
 
 1. <Kintone />の画面上部にある<Wovn>［設定］</Wovn>アイコン（歯車の形）をクリックし、<Wovn>［<Kintone /> AI管理］</Wovn>をクリックします。  
    <Img src="/k/kintone/img-ja/ai_enable_01.png" alt="スクリーンショット：［{{&lt; kintone &gt;}} AI管理］の操作リンクが強調された［設定］メニュー" />
@@ -34,11 +34,11 @@ import Wovn from "@/components/Wovn.astro";
 1. <Wovn>［<Kintone /> AI管理］</Wovn>画面の<Wovn>［<Kintone /> AIラボ］</Wovn>セクションの<Wovn>［検索AI］</Wovn>という機能名の下にある<Wovn>［設定］</Wovn>をクリックします。  
    <Img src="/k/kintone/img-ja/assist_ceate_01.png" alt="スクリーンショット：［検索AI］という機能名の下にある［設定］の操作リンクが強調されている" />
 
-<Heading id="ai_search_assist_manage_20">&lt;Wovn&gt;［検索AI管理］&lt;/Wovn&gt;画面の構成</Heading>
+<Heading id="ai_search_assist_manage_20"><Wovn>［検索AI管理］</Wovn>画面の構成</Heading>
 
 <Img src="/k/kintone/img-ja/assist_manage_01.png" alt="スクリーンショット：［検索AI管理］画面の各項目に番号を記載" />
 
-<Heading level={3} id="ai_search_assist_manage_2010">(1) &lt;Wovn&gt;［作成する］&lt;/Wovn&gt;ボタン</Heading>
+<Heading level={3} id="ai_search_assist_manage_2010">(1) <Wovn>［作成する］</Wovn>ボタン</Heading>
 
 検索AIを新規に作成します。作成手順については、次のページを参照してください。  
 [検索AIを作成する](/k/ja/id/040872.html)
@@ -69,14 +69,14 @@ import Wovn from "@/components/Wovn.astro";
 * <Wovn>［利用を開始］</Wovn>  
   ステータスが<Wovn>［利用停止中］</Wovn>のときに表示されます。クリックすると、利用を再開できます。
 
-<Heading level={3} id="ai_search_assist_manage_2060">(6) &lt;Wovn&gt;［設定］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="ai_search_assist_manage_2060">(6) <Wovn>［設定］</Wovn></Heading>
 
 ［検索AI設定］画面を開きます。
 
-<Heading level={3} id="ai_search_assist_manage_2070">(7) &lt;Wovn&gt;［複製］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="ai_search_assist_manage_2070">(7) <Wovn>［複製］</Wovn></Heading>
 
 作成済みの検索AIを再利用して、新しい検索AIを作成します。元の検索AIの設定情報が引き継がれます。
 
-<Heading level={3} id="ai_search_assist_manage_2080">(8) &lt;Wovn&gt;［削除］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="ai_search_assist_manage_2080">(8) <Wovn>［削除］</Wovn></Heading>
 
 検索AIを削除します。削除した検索AIは復旧できません。運用に問題がないことを十分に確認してから削除するようにしてください。
