--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_datasource.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_settings/search_prefs_datasource.mdx
@@ -93,7 +93,7 @@ import Wovn from "@/components/Wovn.astro";
   <Wovn>［アプリコード］</Wovn>についての詳細は、次のページを参照してください。  
   [アプリコードを設定する](/k/ja/id/040478.html)
 
-<Heading level={3} id="assist_settings_search_prefs_datasource_4030">回答内の&lt;Wovn&gt;［参考情報］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="assist_settings_search_prefs_datasource_4030">回答内の<Wovn>［参考情報］</Wovn></Heading>
 
 データソースとして指定したアプリへのリンクが、回答に<Wovn>［参考情報］</Wovn>として表示されます。  
 このリンクには、対応する<Wovn>［レコードのタイトル］</Wovn>が表示されます。<Wovn>［レコードのタイトルとして利用するフィールド］</Wovn>に<Wovn>［閲覧］</Wovn>の権限がない場合は、<Wovn>［レコード番号］</Wovn>が表示されます。
