--- a/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_usage/open_search.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/ai_search/assist_usage/open_search.mdx
@@ -41,7 +41,7 @@ import Wovn from "@/components/Wovn.astro";
 
 <Img src="/k/kintone/img-ja/open_search_03.png" alt="スクリーンショット：検索AIのチャットボット画面" />
 
-<Heading level={3} id="assist_usage_open_search_2010">(1) &lt;Wovn&gt;［新しく質問する］&lt;/Wovn&gt;ボタン</Heading>
+<Heading level={3} id="assist_usage_open_search_2010">(1) <Wovn>［新しく質問する］</Wovn>ボタン</Heading>
 
 新しいチャットボット画面を表示します。  
 クリックすると、これまでの検索AIに対する質問や回答はリセットされます。
@@ -50,12 +50,12 @@ import Wovn from "@/components/Wovn.astro";
 
 利用する検索AIの名前が表示されます。
 
-<Heading level={3} id="assist_usage_open_search_2030">(3) &lt;Wovn&gt;［最小化］&lt;/Wovn&gt;ボタン</Heading>
+<Heading level={3} id="assist_usage_open_search_2030">(3) <Wovn>［最小化］</Wovn>ボタン</Heading>
 
 クリックすると、<Kintone />の画面右下に最小化されます。  
 チャットボット画面を再表示するには、<Wovn>［最大化］</Wovn>ボタンをクリックします。
 
-<Heading level={3} id="assist_usage_open_search_2040">(4) &lt;Wovn&gt;［閉じる］&lt;/Wovn&gt;ボタン</Heading>
+<Heading level={3} id="assist_usage_open_search_2040">(4) <Wovn>［閉じる］</Wovn>ボタン</Heading>
 
 検索AIを終了します。
 
@@ -73,7 +73,7 @@ import Wovn from "@/components/Wovn.astro";
 
 質問や指示内容を入力する欄です。
 
-<Heading level={3} id="assist_usage_open_search_2080">(8) &lt;Wovn&gt;［送信］&lt;/Wovn&gt;ボタン</Heading>
+<Heading level={3} id="assist_usage_open_search_2080">(8) <Wovn>［送信］</Wovn>ボタン</Heading>
 
 プロンプト入力欄に入力した質問や指示内容を、検索AIに送信するボタンです。
 クリックすると、検索AIの回答生成が始まります。
