--- a/kintone-help-astro-poc/src/pages/ja/ai/app_boost/enhance_usage/open_app_creation.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/app_boost/enhance_usage/open_app_creation.mdx
@@ -43,7 +43,7 @@ import Wovn from "@/components/Wovn.astro";
 
 質問や指示内容を入力する欄です。
 
-<Heading level={3} id="enhance_usage_open_app_creation_2020">(2) &lt;Wovn&gt;［送信］&lt;/Wovn&gt;ボタン</Heading>
+<Heading level={3} id="enhance_usage_open_app_creation_2020">(2) <Wovn>［送信］</Wovn>ボタン</Heading>
 
 プロンプト入力欄に入力した質問や指示内容を、アプリ作成AIに送信するボタンです。クリックすると、アプリ作成AIの回答生成が始まります。
 
@@ -56,6 +56,6 @@ import Wovn from "@/components/Wovn.astro";
 
 </Hint>
 
-<Heading level={3} id="enhance_usage_open_app_creation_2030">(3) &lt;Wovn&gt;［この内容をフォームに反映］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="enhance_usage_open_app_creation_2030">(3) <Wovn>［この内容をフォームに反映］</Wovn></Heading>
 
 アプリ作成AIが提案した内容を、フォームに反映するボタンです。フォームに反映されるまで時間がかかる場合があります。
