--- a/kintone-help-astro-poc/src/pages/ja/ai/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/ai/index.mdx
@@ -48,7 +48,7 @@ AI技術を活用した、さまざまな機能をご利用いただけます。
 * ライトコースを契約している
 * 開発者ライセンスを利用している
 
-<Heading id="ai_index_40">&lt;Kintone /&gt; AIラボのサポート</Heading>
+<Heading id="ai_index_40"><Kintone /> AIラボのサポート</Heading>
 
 <Kintone /> AIラボのサービスで提供している機能は、開発中の機能であるため、弊社サポートの対象外です。
 
