--- a/kintone-help-astro-poc/src/pages/ja/app/app_changesettings.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/app_changesettings.mdx
@@ -21,7 +21,7 @@ import Wovn from "@/components/Wovn.astro";
 なお、設定項目の詳細については、次のページを参照してください。  
 [アプリの設定項目](/k/ja/id/040603.html)
 
-<Heading id="app_settings_app_changesettings_10">&lt;Wovn&gt;［アプリの設定］&lt;/Wovn&gt;画面を開く</Heading>
+<Heading id="app_settings_app_changesettings_10"><Wovn>［アプリの設定］</Wovn>画面を開く</Heading>
 
 <Wovn>［アプリの設定］</Wovn>画面を開くには、<Wovn>［レコードの一覧］</Wovn>画面または<Wovn>［レコードの詳細］</Wovn>画面で、次のいずれかのボタンをクリックします。
 
@@ -85,7 +85,7 @@ import Wovn from "@/components/Wovn.astro";
 また、アプリの動作テスト機能を利用すると、アプリの設定変更を運用環境に適用する前に、意図どおりに変更が行われているかを確認することも可能です。  
 [アプリの動作テストをする](/k/ja/id/040483.html)  
 
-<Heading id="app_settings_app_changesettings_30">&lt;Wovn&gt;［アプリの設定］&lt;/Wovn&gt;画面を開けるユーザー</Heading>
+<Heading id="app_settings_app_changesettings_30"><Wovn>［アプリの設定］</Wovn>画面を開けるユーザー</Heading>
 
 <Wovn>［アプリの設定］</Wovn>画面は、そのアプリの管理権限が設定されているユーザーと、<Slash />共通管理者だけが開くことができます。アプリ管理権限を持つユーザーと<Slash />共通管理者以外には、<Wovn>［アプリを設定］</Wovn>アイコンは表示されません。  
 初期設定では、アプリ作成者にアプリ管理権限が設定されています。  
