--- a/kintone-help-astro-poc/src/pages/ja/app/category/disable_category.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/category/disable_category.mdx
@@ -37,7 +37,7 @@ import Wovn from "@/components/Wovn.astro";
 
 カテゴリーを無効にしようとしたときに、エラーメッセージが表示された場合の対処方法を説明します。
 
-<Heading level={3} id="category_disable_category_2010">&lt;Wovn&gt;［ルックアップ］&lt;/Wovn&gt;フィールドから参照されているカテゴリーを無効にしようとした</Heading>
+<Heading level={3} id="category_disable_category_2010"><Wovn>［ルックアップ］</Wovn>フィールドから参照されているカテゴリーを無効にしようとした</Heading>
 
 無効にしようとするカテゴリーが、別のアプリの<Wovn>［ルックアップ］</Wovn>フィールドから参照されている場合、次のエラーメッセージが表示されます。
 
@@ -51,7 +51,7 @@ import Wovn from "@/components/Wovn.astro";
 カテゴリーを無効にするには、エラーメッセージに表示されたアプリの設定画面を開いて、<Wovn>［ルックアップ］</Wovn>フィールドを削除または設定変更してください。  
 [ルックアップを設定する](/k/ja/id/040547.html)
 
-<Heading level={3} id="category_disable_category_2020">&lt;Wovn&gt;［関連レコード一覧］&lt;/Wovn&gt;フィールドから参照されているカテゴリーを無効にしようとした</Heading>
+<Heading level={3} id="category_disable_category_2020"><Wovn>［関連レコード一覧］</Wovn>フィールドから参照されているカテゴリーを無効にしようとした</Heading>
 
 無効にしようとするカテゴリーが、別のアプリの<Wovn>［関連レコード一覧］</Wovn>フィールドから参照されている場合、次のエラーメッセージが表示されます。
 
@@ -66,7 +66,7 @@ import Wovn from "@/components/Wovn.astro";
 カテゴリーを無効にするには、エラーメッセージに表示されたアプリの設定画面を開いて、<Wovn>［関連レコード一覧］</Wovn>フィールドを削除または設定変更してください。<Wovn></Wovn>  
 [関連レコード一覧を設定する](/k/ja/id/040552.html)
 
-<Heading level={3} id="category_disable_category_2030">削除済みアプリの&lt;Wovn&gt;［ルックアップ］&lt;/Wovn&gt;フィールドから参照されているカテゴリーを無効にしようとした</Heading>
+<Heading level={3} id="category_disable_category_2030">削除済みアプリの<Wovn>［ルックアップ］</Wovn>フィールドから参照されているカテゴリーを無効にしようとした</Heading>
 
 無効にしようとするカテゴリーが、削除済みアプリの<Wovn>［ルックアップ］</Wovn>フィールドから参照されている場合、次のエラーメッセージが表示されます。
 
@@ -86,7 +86,7 @@ import Wovn from "@/components/Wovn.astro";
 * [削除したアプリを復旧する](/k/ja/id/04016.html)
 * [ルックアップを設定する](/k/ja/id/040547.html)
 
-<Heading level={3} id="category_disable_category_101040">削除済みアプリの&lt;Wovn&gt;［関連レコード一覧］&lt;/Wovn&gt;フィールドから参照されているカテゴリーを無効にしようとした</Heading>
+<Heading level={3} id="category_disable_category_101040">削除済みアプリの<Wovn>［関連レコード一覧］</Wovn>フィールドから参照されているカテゴリーを無効にしようとした</Heading>
 
 無効にしようとするカテゴリーが、削除済みアプリの<Wovn>［関連レコード一覧］</Wovn>フィールドから参照されている場合、次のエラーメッセージが表示されます。
 
