--- a/kintone-help-astro-poc/src/pages/ja/app/comment/record_comment.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/comment/record_comment.mdx
@@ -59,21 +59,21 @@ import Wovn from "@/components/Wovn.astro";
 
 コメントの右上に表示されます。投稿日時は、そのコメント固有のリンクになっています。投稿日時をクリックすると、そのコメントのリンクに遷移します。投稿日時を右クリックすると、Webブラウザーの機能でコメントのURLをコピーできます。
 
-<Heading level={3} id="app_collectdata_record_comment_2020">&lt;Wovn&gt;［いいね！］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_collectdata_record_comment_2020"><Wovn>［いいね！］</Wovn></Heading>
 
 そのコメントに対して肯定的な意思を示したり、コメントを読んだことを伝えたりできます。<Wovn></Wovn>  
 [コメントに「いいね！」する](/k/ja/id/040469.html)
 
-<Heading level={3} id="app_collectdata_record_comment_2030">&lt;Wovn&gt;［返信］&lt;/Wovn&gt;／&lt;Wovn&gt;［全員に返信］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_collectdata_record_comment_2030"><Wovn>［返信］</Wovn>／<Wovn>［全員に返信］</Wovn></Heading>
 
 <Wovn>［返信］</Wovn>をクリックすると、そのコメントを書き込んだユーザーが宛先に指定された状態で、コメントを返信できます。  
 <Wovn>［全員に返信］</Wovn>をクリックすると、そのコメントを書き込んだユーザー、およびそのコメントの宛先のユーザー・組織・グループが宛先に指定された状態で、コメントを返信できます。
 
-<Heading level={3} id="app_collectdata_record_comment_2040">&lt;Wovn&gt;［リンク］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_collectdata_record_comment_2040"><Wovn>［リンク］</Wovn></Heading>
 
 そのコメントのリンクを表示できます。<Wovn></Wovn>
 
-<Heading level={3} id="app_collectdata_record_comment_2050">&lt;Wovn&gt;［削除］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_collectdata_record_comment_2050"><Wovn>［削除］</Wovn></Heading>
 
 自分が書き込んだコメントを削除できます。<Wovn></Wovn>他のユーザーによって書き込まれたコメントには<Wovn>［削除］</Wovn>は表示されません。
 
