--- a/kintone-help-astro-poc/src/pages/ja/app/data/import_records/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/data/import_records/index.mdx
@@ -29,7 +29,7 @@ ExcelファイルやCSVファイルをアプリに読み込んで、複数レコ
 表計算ソフトやテキストエディターなどで作成したファイルを、<Kintone />のアプリに読み込むことで、ファイルで管理していたデータを<Kintone />に移行・反映できます。  
 Excelでのデータ管理から<Kintone />のアプリでのデータ管理に変更するときなどに活用できます。
 
-<Heading level={3} id="using_app_import_records_1030">(3) &lt;Kintone /&gt;内のデータを利用して登録</Heading>
+<Heading level={3} id="using_app_import_records_1030">(3) <Kintone />内のデータを利用して登録</Heading>
 
 * **同じアプリのデータを利用して登録**  
   アプリから書き出したファイルを元に、データを追加・修正してから、同じアプリに読み込むことで、登録済みのデータを利用して、レコードをまとめて登録・更新できます。  
