--- a/kintone-help-astro-poc/src/pages/ja/app/manage/changespace_app_belongsto.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/manage/changespace_app_belongsto.mdx
@@ -113,11 +113,11 @@ import Wovn from "@/components/Wovn.astro";
 
 「アプリの所属するスペースを変更する機能」に関するQ&A／トラブルシューティングです。<Wovn></Wovn>
 
-<Heading level={3} id="app_settings_changespace_app_belongsto_5010">アプリの設定画面に&lt;Wovn&gt;［アプリの所属するスペースを変更］&lt;/Wovn&gt;が表示されません</Heading>
+<Heading level={3} id="app_settings_changespace_app_belongsto_5010">アプリの設定画面に<Wovn>［アプリの所属するスペースを変更］</Wovn>が表示されません</Heading>
 
 スペース機能が無効になっている可能性があります。システム管理者がスペース機能を無効にしている場合、アプリの所属するスペースを変更することはできません。
 
-<Heading level={3} id="app_settings_changespace_app_belongsto_5020">アプリの設定画面の&lt;Wovn&gt;［アプリの所属するスペースを変更］&lt;/Wovn&gt;がグレー表示されてクリックできません</Heading>
+<Heading level={3} id="app_settings_changespace_app_belongsto_5020">アプリの設定画面の<Wovn>［アプリの所属するスペースを変更］</Wovn>がグレー表示されてクリックできません</Heading>
 
 <Wovn>［アプリの所属するスペースを変更］</Wovn>にカーソルを合わせると、クリックできない理由を説明するメッセージが表示されます。  
 メッセージの内容や以下の表を参考に、対処してください。
