--- a/kintone-help-astro-poc/src/pages/ja/app/manage/reference.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/manage/reference.mdx
@@ -24,7 +24,7 @@ import Wovn from "@/components/Wovn.astro";
 
 1. <Wovn>［このアプリを参照しているアプリ］</Wovn>画面で、現在開いているアプリを参照しているアプリを確認します。
 
-<Heading id="app_settings_reference_20">&lt;Wovn&gt;［このアプリを参照しているアプリ］&lt;/Wovn&gt;画面に表示される項目</Heading>
+<Heading id="app_settings_reference_20"><Wovn>［このアプリを参照しているアプリ］</Wovn>画面に表示される項目</Heading>
 
 <Wovn>［このアプリを参照しているアプリ］</Wovn>画面に表示される項目は、次のとおりです。
 
