--- a/kintone-help-astro-poc/src/pages/ja/app/oauth/msflow.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/oauth/msflow.mdx
@@ -39,7 +39,7 @@ Microsoft Power Automateを使って、<Kintone />とほかのWebサービスの
 
 </Note>
 
-<Heading id="oauth_msflow_10">設定例：&lt;Kintone /&gt;にレコードが登録されたらOutlookでメールを送信する</Heading>
+<Heading id="oauth_msflow_10">設定例：<Kintone />にレコードが登録されたらOutlookでメールを送信する</Heading>
 
 <Warning>
 
@@ -137,7 +137,7 @@ Microsoft Power Automateを使って、<Kintone />とほかのWebサービスの
 <Kintone />のアプリにレコードが登録されたら、Outlookからメールが送られるようになります。  
 次に、逆のパターンとして、メールを受信したら<Kintone />のアプリにレコードを登録するように設定してみましょう。
 
-<Heading id="oauth_msflow_20">設定例：Gmailでメールを受信したら&lt;Kintone /&gt;にレコードを登録する</Heading>
+<Heading id="oauth_msflow_20">設定例：Gmailでメールを受信したら<Kintone />にレコードを登録する</Heading>
 
 <Warning>
 
