--- a/kintone-help-astro-poc/src/pages/ja/app/oauth/slack_integration.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/oauth/slack_integration.mdx
@@ -93,7 +93,7 @@ Slack連携は、次の流れで設定します。
 
 1. <Wovn>［Slack］</Wovn>を<Wovn>［有効］</Wovn>に切り替えます。
 
-<Heading id="app_settings_slack_integration_50">&lt;Kintone /&gt;のアプリでプロセス管理を有効にする</Heading>
+<Heading id="app_settings_slack_integration_50"><Kintone />のアプリでプロセス管理を有効にする</Heading>
 
 Slack連携を設定したい<Kintone />のアプリで、プロセス管理を設定します。<Wovn></Wovn>  
 [プロセス管理を設定する](/k/ja/id/040575.html)  
