--- a/kintone-help-astro-poc/src/pages/ja/app/plugin/manage/confirm_plugin.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/plugin/manage/confirm_plugin.mdx
@@ -16,7 +16,7 @@ import Wovn from "@/components/Wovn.astro";
 
 プラグインの利用状況は、<Kintone />システム管理の<Wovn>［プラグイン］</Wovn>画面で確認できます。ここでは、<Wovn>［プラグイン］</Wovn>画面の見かたや、プラグインが追加されているアプリを確認する方法を説明します。
 
-<Heading id="add_plugin_confirm_plugin_10">&lt;Wovn&gt;［プラグイン］&lt;/Wovn&gt;画面の見かた</Heading>
+<Heading id="add_plugin_confirm_plugin_10"><Wovn>［プラグイン］</Wovn>画面の見かた</Heading>
 
 <Kintone />システム管理の<Wovn>［プラグイン］</Wovn>画面には、次の項目が表示されます。該当するプラグインが存在しない項目は表示されません。
 
@@ -39,7 +39,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Enabled>
 
-<Heading level={3} id="add_plugin_confirm_plugin_1010">&lt;Wovn&gt;［インストールが必要なプラグイン］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="add_plugin_confirm_plugin_1010"><Wovn>［インストールが必要なプラグイン］</Wovn></Heading>
 
 アプリに追加されているプラグインのうち、<Kintone />にインストールされていないプラグインが表示されます。この欄に表示されているプラグインは、アプリで利用できない状態となっています。
 
@@ -50,7 +50,7 @@ import Wovn from "@/components/Wovn.astro";
 * <Wovn>［ステータス］</Wovn>列に<Wovn>［インストールできません。］</Wovn>と表示されている場合<Wovn></Wovn>  
   再度ファイルを読み込んで、プラグインをインストールします。
 
-<Heading level={3} id="add_plugin_confirm_plugin_1020">&lt;Wovn&gt;［読み込んだプラグイン］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="add_plugin_confirm_plugin_1020"><Wovn>［読み込んだプラグイン］</Wovn></Heading>
 
 ファイルから読み込んだプラグインが表示されます。プラグインのバージョンや説明を確認できます。
 
@@ -58,7 +58,7 @@ import Wovn from "@/components/Wovn.astro";
 
 <Enabled regions={["JP", "CN"]}>
 
-<Heading level={3} id="add_plugin_confirm_plugin_1030">&lt;Wovn&gt;［プラグインストア］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="add_plugin_confirm_plugin_1030"><Wovn>［プラグインストア］</Wovn></Heading>
 
 弊社が提供するプラグインが表示されます。プラグインのバージョンや説明を確認できます。
 
