--- a/kintone-help-astro-poc/src/pages/ja/app/plugin/settings/mailwise_plugin.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/plugin/settings/mailwise_plugin.mdx
@@ -48,7 +48,7 @@ import Wovn from "@/components/Wovn.astro";
 * **PCで<Kintone />を利用している**  
   スマートフォンで<Kintone />を操作するときは、メールワイズと連携した機能を利用できません。
 
-<Heading id="add_plugin_mailwise_plugin_30">&lt;Kintone /&gt;とメールワイズを連携する</Heading>
+<Heading id="add_plugin_mailwise_plugin_30"><Kintone />とメールワイズを連携する</Heading>
 
 ここでは、<Kintone />のアプリで管理している顧客情報やメールテンプレートを利用して、メールワイズとの連携を設定する方法を説明します。
 
@@ -140,7 +140,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading level={3} id="add_plugin_mailwise_plugin_3020">STEP2：&lt;Kintone /&gt;にメールワイズ連携のプラグインをインストールする</Heading>
+<Heading level={3} id="add_plugin_mailwise_plugin_3020">STEP2：<Kintone />にメールワイズ連携のプラグインをインストールする</Heading>
 
 <Kintone />システム管理者が、<Wovn>［<Kintone />システム管理］</Wovn>画面でメールワイズ連携のプラグインをインストールします。
 
