--- a/kintone-help-astro-poc/src/pages/ja/app/plugin/settings/office_schedule_plugin.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/plugin/settings/office_schedule_plugin.mdx
@@ -60,7 +60,7 @@ import Wovn from "@/components/Wovn.astro";
 * **PCで<Kintone />を利用している**  
   スマートフォンで<Kintone />を操作するときは、サイボウズ Officeのスケジュールと連携した機能を利用できません。
 
-<Heading id="add_plugin_office_schedule_plugin_30">&lt;Kintone /&gt;でサイボウズ Officeのスケジュールとの連携を設定する</Heading>
+<Heading id="add_plugin_office_schedule_plugin_30"><Kintone />でサイボウズ Officeのスケジュールとの連携を設定する</Heading>
 
 <Kintone />のレコードから、サイボウズ Officeの予定を登録または検索するには、プラグインの設定が必要です。
 
@@ -78,7 +78,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading level={3} id="add_plugin_office_schedule_plugin_3010">&lt;Kintone /&gt;にサイボウズ Office スケジュール連携のプラグインをインストールする</Heading>
+<Heading level={3} id="add_plugin_office_schedule_plugin_3010"><Kintone />にサイボウズ Office スケジュール連携のプラグインをインストールする</Heading>
 
 <Kintone />システム管理者が、<Kintone />システム管理画面でサイボウズ Office スケジュール連携のプラグインをインストールします。
 
@@ -141,7 +141,7 @@ import Wovn from "@/components/Wovn.astro";
 
 1. 確認ダイアログで<Wovn>［アプリを更新］</Wovn>をクリックします。
 
-<Heading id="add_plugin_office_schedule_plugin_40">サイボウズ Officeで&lt;Kintone /&gt;との連携を設定する</Heading>
+<Heading id="add_plugin_office_schedule_plugin_40">サイボウズ Officeで<Kintone />との連携を設定する</Heading>
 
 サイボウズ Officeのシステム管理者が、サイボウズ Officeで<Kintone />との連携を設定してください。  
 <Kintone />との連携を有効にして、予定に表示するレコードの情報としてアプリやフィールドを指定します。
@@ -186,7 +186,7 @@ import Wovn from "@/components/Wovn.astro";
 
 <Heading id="add_plugin_office_schedule_plugin_50">サイボウズ Officeのスケジュールと連携した機能を利用する</Heading>
 
-<Heading level={3} id="add_plugin_office_schedule_plugin_5010">サイボウズ Officeの予定に、&lt;Kintone /&gt;のレコードを関連付ける</Heading>
+<Heading level={3} id="add_plugin_office_schedule_plugin_5010">サイボウズ Officeの予定に、<Kintone />のレコードを関連付ける</Heading>
 
 サイボウズ Officeに登録された予定に、関連するレコードの情報として、<Kintone />のアプリやレコードへのリンクを表示します。  
 <Kintone />と関連付けられる予定の種類は、「通常予定」と「翌日以降まで続く予定」です。
@@ -205,7 +205,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading level={3} id="add_plugin_office_schedule_plugin_5020">&lt;Kintone /&gt;のレコードから、関連するサイボウズ Officeの予定を表示する</Heading>
+<Heading level={3} id="add_plugin_office_schedule_plugin_5020"><Kintone />のレコードから、関連するサイボウズ Officeの予定を表示する</Heading>
 
 <Kintone />のレコードから、そのレコードと関連付けられた予定の<Wovn>［予定の詳細］</Wovn>画面を表示します。  
 表示される予定は、操作しているユーザーが閲覧できる予定のみです。
@@ -219,7 +219,7 @@ import Wovn from "@/components/Wovn.astro";
 
 1. 詳細を確認したい予定をクリックします。
 
-<Heading level={3} id="add_plugin_office_schedule_plugin_5030">&lt;Kintone /&gt;のレコードから、サイボウズ Officeに予定を登録する</Heading>
+<Heading level={3} id="add_plugin_office_schedule_plugin_5030"><Kintone />のレコードから、サイボウズ Officeに予定を登録する</Heading>
 
 <Kintone />のレコードから、そのレコードと関連付けた予定を登録します。  
 登録できる予定の種類は、「通常予定」と「翌日以降まで続く予定」です。
