--- a/kintone-help-astro-poc/src/pages/ja/app/process/change_processsettings.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/process/change_processsettings.mdx
@@ -116,7 +116,7 @@ import Slash from "@/components/Slash.astro";
 作業者の設定を変更しても、作成済みのレコードに設定された作業者は変更されません。  
 作業者の変更が必要なレコードがある場合は、アプリの管理者が個別に変更してください。
 
-<Heading level={3} id="process_change_processsettings_3020">作業者に指定されているユーザーの&lt;Kintone /&gt;の利用を停止する場合</Heading>
+<Heading level={3} id="process_change_processsettings_3020">作業者に指定されているユーザーの<Kintone />の利用を停止する場合</Heading>
 
 利用を停止するユーザーが作業者に指定されていると、レコードのステータスを変更できなくなります。  
 アプリの管理者が、作業者を現在<Kintone />を使用中のユーザーに変更すると、ステータスを変更できるようになります。  
