--- a/kintone-help-astro-poc/src/pages/ja/app/set_webhook/disabled_webhook.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/set_webhook/disabled_webhook.mdx
@@ -41,7 +41,7 @@ import Wovn from "@/components/Wovn.astro";
 
 再度有効にする場合は、<Wovn>［Webhookの編集］</Wovn>画面で<Wovn>［このWebhookを有効にする］</Wovn>にチェックを入れます。
 
-<Heading id="set_webhook_disabled_webhook_20">Webhookの利用を禁止する（&lt;Slash /&gt;共通管理者の操作）</Heading>
+<Heading id="set_webhook_disabled_webhook_20">Webhookの利用を禁止する（<Slash />共通管理者の操作）</Heading>
 
 <Slash />共通管理者は、すべてのユーザーに対してWebhookの利用を禁止できます（ユーザーごとの利用制御はできません）。  
 Webhookの利用を禁止すると、すべてのアプリの設定画面で<Wovn>［Webhook］</Wovn>のメニューが表示されなくなり、Webhookの追加・閲覧・編集ができなくなります。また、設定済みのWebhookの通知は送信されなくなります。
