--- a/kintone-help-astro-poc/src/pages/ja/app/set_webhook/webhook.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/set_webhook/webhook.mdx
@@ -115,7 +115,7 @@ Webhookを設定する前に、次を準備してください。
 
 次に<Kintone />でWebhookを設定します。ZapierのWebページはそのまま開いておいてください。
 
-<Heading level={3} id="set_webhook_webhook_3030">(2) &lt;Kintone /&gt;でWebhookを設定する</Heading>
+<Heading level={3} id="set_webhook_webhook_3030">(2) <Kintone />でWebhookを設定する</Heading>
 
 1. <Wovn>［レコードの一覧］</Wovn>画面で、画面右上にある歯車の形をした<Wovn>［アプリを設定］</Wovn>アイコンをクリックします。  
    <Img src="/k/kintone/img/settings_new_icon.png" alt="スクリーンショット：［アプリを設定］アイコンが枠線で強調されている" />
@@ -188,7 +188,7 @@ Webhookを設定する前に、次を準備してください。
 
 </Note>
 
-<Heading id="set_webhook_webhook_40">&lt;Kintone /&gt;のWebhookの設定を変更する</Heading>
+<Heading id="set_webhook_webhook_40"><Kintone />のWebhookの設定を変更する</Heading>
 
 <Kintone />のWebhookの設定内容をあとから変更できます。手順は、次のとおりです。
 
