--- a/kintone-help-astro-poc/src/pages/ja/app/set_webhook/webhook_logs.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/set_webhook/webhook_logs.mdx
@@ -54,7 +54,7 @@ Webhookの設定を確認してください。
 Webhookの通知は、1分間に最大60回まで送信されます。  
 1分間に60回を超えてレコードを操作すると、61回目以降の操作ではWebhookの通知が送信されません。
 
-<Heading level={3} id="set_webhook_webhook_logs_2020">&lt;Kintone /&gt;のエラーで通知に失敗した</Heading>
+<Heading level={3} id="set_webhook_webhook_logs_2020"><Kintone />のエラーで通知に失敗した</Heading>
 
 次の原因が考えられます。
 
