--- a/kintone-help-astro-poc/src/pages/ja/app/setting_items.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setting_items.mdx
@@ -25,22 +25,22 @@ import Wovn from "@/components/Wovn.astro";
 * [［グラフ］タブ](#app_settings_setting_items_30)
 * [［設定］タブ](#app_settings_setting_items_40)
 
-<Heading id="app_settings_setting_items_10">&lt;Wovn&gt;［フォーム］&lt;/Wovn&gt;タブ</Heading>
+<Heading id="app_settings_setting_items_10"><Wovn>［フォーム］</Wovn>タブ</Heading>
 
 アプリにデータを入力するためのフォームを設定できます。設定方法の詳細は、次のページを参照してください。  
 [フォームの設定](/k/ja/id/040494.html)
 
-<Heading id="app_settings_setting_items_20">&lt;Wovn&gt;［一覧］&lt;/Wovn&gt;タブ</Heading>
+<Heading id="app_settings_setting_items_20"><Wovn>［一覧］</Wovn>タブ</Heading>
 
 アプリに登録したレコードの、一覧の表示形式を設定できます。設定方法の詳細は、次のページを参照してください。  
 [レコードの一覧の設定](/k/ja/id/040605.html)
 
-<Heading id="app_settings_setting_items_30">&lt;Wovn&gt;［グラフ］&lt;/Wovn&gt;タブ</Heading>
+<Heading id="app_settings_setting_items_30"><Wovn>［グラフ］</Wovn>タブ</Heading>
 
 数値の合計やレコード数などを集計するための条件を設定できます。作成したグラフは、<Wovn>［レコードの一覧］</Wovn>画面で<Wovn>［グラフ］</Wovn>アイコンをクリックすると表示されるドロップダウンリストから選択できます。設定方法の詳細は、次のページを参照してください。  
 [［アプリの設定］画面からグラフを追加する](/k/ja/id/040586.html)
 
-<Heading id="app_settings_setting_items_40">&lt;Wovn&gt;［設定］&lt;/Wovn&gt;タブ</Heading>
+<Heading id="app_settings_setting_items_40"><Wovn>［設定］</Wovn>タブ</Heading>
 
 <Wovn>［設定］</Wovn>タブには、次のカテゴリーごとに、設定できる項目が表示されています。
 
@@ -52,7 +52,7 @@ import Wovn from "@/components/Wovn.astro";
 * [［運用管理］](#app_settings_setting_items_4060)
 * [［アプリの削除］](#app_settings_setting_items_4070)
 
-<Heading level={3} id="app_settings_setting_items_4010">&lt;Wovn&gt;［一般設定］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_settings_setting_items_4010"><Wovn>［一般設定］</Wovn></Heading>
 
 <Wovn>［一般設定］</Wovn>で設定できる項目は、次のとおりです。
 
@@ -61,7 +61,7 @@ import Wovn from "@/components/Wovn.astro";
 * [プロセス管理の設定](/k/ja/id/040568.html)  
   複数のユーザーでレコードの編集や確認をするためのプロセス（ワークフロー）を設定できます。
 
-<Heading level={3} id="app_settings_setting_items_4020">&lt;Wovn&gt;［通知］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_settings_setting_items_4020"><Wovn>［通知］</Wovn></Heading>
 
 レコードが編集されたことや、レコードにコメントが書き込まれたことなどを、アプリの利用ユーザーに通知できます。  
 レコード内の日時情報をもとにしたリマインド通知も送信できます。  
@@ -71,7 +71,7 @@ import Wovn from "@/components/Wovn.astro";
 * [レコードの条件通知：レコードが特定の条件を満たしたときの通知を設定する](/k/ja/id/040563.html)
 * [リマインダーの条件通知：日時を条件にしたリマインド通知を設定する](/k/ja/id/040564.html)
 
-<Heading level={3} id="app_settings_setting_items_4030">&lt;Wovn&gt;［カスタマイズ／サービス連携］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_settings_setting_items_4030"><Wovn>［カスタマイズ／サービス連携］</Wovn></Heading>
 
 <Wovn>［カスタマイズ／サービス連携］</Wovn>で設定できる項目は、次のとおりです。
 
@@ -84,7 +84,7 @@ import Wovn from "@/components/Wovn.astro";
 * [Webhookの設定](/k/ja/id/040599.html)  
   Webhookは、複数のWebサービスを連携するための仕組みです。<Kintone />でWebhookを設定すると、レコードの追加や編集などの操作が行われたとき、外部のWebサービスに通知できます。
 
-<Heading level={3} id="app_settings_setting_items_4040">&lt;Wovn&gt;［アクセス権］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_settings_setting_items_4040"><Wovn>［アクセス権］</Wovn></Heading>
 
 <Wovn>［アクセス権］</Wovn>で設定できる項目は、次のとおりです。
 
@@ -92,7 +92,7 @@ import Wovn from "@/components/Wovn.astro";
 * [レコードにアクセス権を設定する](/k/ja/id/040595.html)
 * [フィールドにアクセス権を設定する](/k/ja/id/040593.html)
 
-<Heading level={3} id="app_settings_setting_items_4050">&lt;Wovn&gt;［その他の設定］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_settings_setting_items_4050"><Wovn>［その他の設定］</Wovn></Heading>
 
 <Wovn>［その他の設定］</Wovn>で設定できる項目は、次のとおりです。
 
@@ -116,7 +116,7 @@ import Wovn from "@/components/Wovn.astro";
 * [アプリアクションの設定](/k/ja/id/040484.html)  
   アプリのレコードで実行するアクションを作成します。
 
-<Heading level={3} id="app_settings_setting_items_4060">&lt;Wovn&gt;［運用管理］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_settings_setting_items_4060"><Wovn>［運用管理］</Wovn></Heading>
 
 <Wovn>［運用管理］</Wovn>で設定できる項目は、次のとおりです。
 
@@ -129,7 +129,7 @@ import Wovn from "@/components/Wovn.astro";
 * [アプリのメンテナンスモードを開始／終了する](/k/ja/id/040838.html)  
   レコードの閲覧や操作を一時的に制限できます。
 
-<Heading level={3} id="app_settings_setting_items_4070">&lt;Wovn&gt;［アプリの削除］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="app_settings_setting_items_4070"><Wovn>［アプリの削除］</Wovn></Heading>
 
 <Wovn>［設定］</Wovn>タブから、アプリを削除できます。詳細は、次のページを参照してください。  
 [アプリを削除する](/k/ja/id/040633.html)
