--- a/kintone-help-astro-poc/src/pages/ja/app/setup/followup/favorite.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/followup/favorite.mdx
@@ -33,7 +33,7 @@ import Wovn from "@/components/Wovn.astro";
 お気に入りを解除したいアプリを開き、画面右上のピンの形をした<Wovn>［お気に入り］</Wovn>アイコンをクリックします。<Wovn></Wovn>  
 <Img src="/k/kintone/img-ja/favorite_img4_1_1.png" alt="スクリーンショット：アプリの画面の右上にある［お気に入り］アイコンを枠線で強調している" />
 
-<Heading level={3} id="create_app_favorite_2020">&lt;Wovn&gt;［お気に入りのアプリ］&lt;/Wovn&gt;の一覧から解除する方法</Heading>
+<Heading level={3} id="create_app_favorite_2020"><Wovn>［お気に入りのアプリ］</Wovn>の一覧から解除する方法</Heading>
 
 お気に入りのアプリを整理したい場合などは、一覧から解除できます。ポータルの<Wovn>［アプリ］</Wovn>エリアのドロップダウンリストで、<Wovn>［お気に入りのアプリ］</Wovn>の右端に表示される<Wovn>［編集］</Wovn>をクリックします。<Wovn></Wovn><Wovn></Wovn><Wovn></Wovn>  
 <Img src="/k/kintone/img-ja/sort_favorite_app_img01.png" alt="スクリーンショット：［アプリ］エリアのドロップダウンリストの［編集］を枠線で強調している" />
