--- a/kintone-help-astro-poc/src/pages/ja/app/setup/template/whats_template.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/setup/template/whats_template.mdx
@@ -26,7 +26,7 @@ import Kintone from "@/components/Kintone.astro";
 
 </Hint>
 
-<Heading id="app_admin_template_whats_template_10">アプリテンプレートをファイルとして&lt;Kintone /&gt;の外に保存する</Heading>
+<Heading id="app_admin_template_whats_template_10">アプリテンプレートをファイルとして<Kintone />の外に保存する</Heading>
 
 アプリテンプレートは、zipファイルとして<Kintone />の外（パソコンなど）に保存できます。このテンプレートファイルは、ドメインが異なる<Kintone />でも読み込めるので、異なる<Kintone />間でアプリの設定内容をやりとりしたい場合などに活用できます。
 
@@ -42,7 +42,7 @@ import Kintone from "@/components/Kintone.astro";
 <Kintone />の外に保存したテンプレートファイルから新しいアプリを作成する手順は、次のページを参照してください。  
 [テンプレートファイルからアプリを作成する](/k/ja/id/040627.html)
 
-<Heading id="app_admin_template_whats_template_20">アプリテンプレートを&lt;Kintone /&gt;内に登録する</Heading>
+<Heading id="app_admin_template_whats_template_20">アプリテンプレートを<Kintone />内に登録する</Heading>
 
 アプリをテンプレート化して<Kintone />内に登録しておくと、同じ<Kintone />を利用しているユーザーが、登録済みのテンプレートからアプリを作成できるようになります。
 
