--- a/kintone-help-astro-poc/src/pages/ja/app/using_app/edit_record.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/app/using_app/edit_record.mdx
@@ -28,7 +28,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading id="using_app_edit_record_10">&lt;Wovn&gt;［レコードの一覧］&lt;/Wovn&gt;画面でレコードを編集する</Heading>
+<Heading id="using_app_edit_record_10"><Wovn>［レコードの一覧］</Wovn>画面でレコードを編集する</Heading>
 
 1. アプリをクリックして<Wovn>［レコードの一覧］</Wovn>画面を表示します。
 
@@ -41,7 +41,7 @@ import Wovn from "@/components/Wovn.astro";
   変更内容を保存せずにキャンセルする場合は、一番右の列にある<Wovn>［キャンセル］</Wovn>アイコン、またはレコードの直下に表示される<Wovn>［キャンセル］</Wovn>をクリックします。
    <Img src="/k/kintone/img-ja/edit_record_03.png" alt="スクリーンショット：［キャンセル］アイコンと［キャンセル］を枠線で強調" />
 
-<Heading id="using_app_edit_record_20">&lt;Wovn&gt;［レコードの一覧］&lt;/Wovn&gt;画面でレコードを削除する</Heading>
+<Heading id="using_app_edit_record_20"><Wovn>［レコードの一覧］</Wovn>画面でレコードを削除する</Heading>
 
 <Warning>
 
@@ -57,7 +57,7 @@ import Wovn from "@/components/Wovn.astro";
 1. <Wovn>［削除する］</Wovn>をクリックします。  
    <Img src="/k/kintone/img-ja/edit_record_05.png" alt="スクリーンショット：［削除する］アイコンをクリックしたあとに表示される［削除する］ボタンを枠線で強調" />
 
-<Heading id="using_app_edit_record_30">&lt;Wovn&gt;［レコードの一覧］&lt;/Wovn&gt;画面で編集できるフィールド</Heading>
+<Heading id="using_app_edit_record_30"><Wovn>［レコードの一覧］</Wovn>画面で編集できるフィールド</Heading>
 
 <Wovn>［レコードの一覧］</Wovn>画面で編集できるフィールドは、次のとおりです。
 
