--- a/kintone-help-astro-poc/src/pages/ja/common_operations/login_logout.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/common_operations/login_logout.mdx
@@ -22,7 +22,7 @@ import Wovn from "@/components/Wovn.astro";
 ログインする際は、WebブラウザーにURLを入力して、ログイン画面にアクセスします。  
 ログアウト操作は、<Kintone />の画面で行います。  
 
-<Heading id="login_trouble_login_logout_10">&lt;Kintone /&gt;にログインする</Heading>
+<Heading id="login_trouble_login_logout_10"><Kintone />にログインする</Heading>
 
 1. ログインURL「https://（サブドメイン名）.<CybozuCom />/」を、Webブラウザーのアドレスバーに入力し、アクセスします。<Wovn></Wovn>  
   ログインURLがわからない場合は、システム管理者に確認してください。  
@@ -73,7 +73,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Hint>
 
-<Heading id="login_trouble_login_logout_20">&lt;Kintone /&gt;からログアウトする</Heading>
+<Heading id="login_trouble_login_logout_20"><Kintone />からログアウトする</Heading>
 
 1. <Kintone />画面右上のV字の形をした<Wovn>［アカウントメニュー］</Wovn>アイコンをクリックします。
 
