--- a/kintone-help-astro-poc/src/pages/ja/guest/manage/confirm_guest_license.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/guest/manage/confirm_guest_license.mdx
@@ -27,9 +27,9 @@ import Wovn from "@/components/Wovn.astro";
 ライセンスの違いについては、次の項目を参照してください。  
 [ゲストユーザーのライセンスの違い](#guest_confirm_guest_license_30)
 
-<Heading id="guest_confirm_guest_license_10">&lt;Wovn&gt;［ライセンスの使用状況］&lt;/Wovn&gt;の項目説明</Heading>
+<Heading id="guest_confirm_guest_license_10"><Wovn>［ライセンスの使用状況］</Wovn>の項目説明</Heading>
 
-<Heading level={3} id="guest_confirm_guest_license_1010">&lt;Wovn&gt;［試用期間中のゲストユーザー数］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_license_1010"><Wovn>［試用期間中のゲストユーザー数］</Wovn></Heading>
 
 ゲストユーザーのうち、次のステータスとライセンスのユーザー数が表示されます。
 
@@ -38,7 +38,7 @@ import Wovn from "@/components/Wovn.astro";
 
 試用期間中のゲストユーザーは、30日間の試用期間が終了すると、自動的に有料ゲストユーザーに切り替わります。
 
-<Heading level={3} id="guest_confirm_guest_license_1020">&lt;Wovn&gt;［有料ゲストユーザー数］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_license_1020"><Wovn>［有料ゲストユーザー数］</Wovn></Heading>
 
 ゲストユーザーのうち、次のステータスとライセンスのユーザー数が表示されます。
 
@@ -48,7 +48,7 @@ import Wovn from "@/components/Wovn.astro";
 ゲストユーザーの<Wovn>［ライセンス］</Wovn>が<Wovn>［有料］</Wovn>でも、<Wovn>［ステータス］</Wovn>が<Wovn>［停止中］</Wovn>の場合は、<Wovn>［有料ゲストユーザー数］</Wovn>には含まれません。  
 <Wovn>［有料ゲストユーザー数］</Wovn>に表示されているユーザー数と同じ分だけ、ライセンス契約が必要です。
 
-<Heading level={3} id="guest_confirm_guest_license_1030">&lt;Wovn&gt;［有料ゲストユーザー数の契約数］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_license_1030"><Wovn>［有料ゲストユーザー数の契約数］</Wovn></Heading>
 
 ゲストユーザーの現在のライセンス契約数です。  
 <Wovn>［有料ゲストユーザー数の契約数］</Wovn>に表示されている契約数分の、ゲストユーザーのライセンス利用料が発生しています。
@@ -101,7 +101,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Enabled>
 
-<Heading level={3} id="guest_confirm_guest_license_2020">&lt;Wovn&gt;［有料ゲストユーザー数］&lt;/Wovn&gt;を減らす場合</Heading>
+<Heading level={3} id="guest_confirm_guest_license_2020"><Wovn>［有料ゲストユーザー数］</Wovn>を減らす場合</Heading>
 
 <Wovn>［ゲストユーザーの一覧］</Wovn>で、<Wovn>［ライセンス］</Wovn>が<Wovn>［有料］</Wovn>のゲストユーザーを確認して、<Wovn>［ステータス］</Wovn>を<Wovn>［停止］</Wovn>に変更するか、アカウントを削除してください。
 
@@ -111,7 +111,7 @@ import Wovn from "@/components/Wovn.astro";
 
 ゲストユーザーのライセンスは、<Wovn>［試用］</Wovn>、<Wovn>［有料］</Wovn>、および<Wovn>［無料］</Wovn>の3種類です。
 
-<Heading level={3} id="guest_confirm_guest_license_3010">&lt;Wovn&gt;［試用］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_license_3010"><Wovn>［試用］</Wovn></Heading>
 
 試用期間中のライセンスです。  
 ゲストスペースに招待され、ゲストユーザーとしてはじめてログインした日から30日間は試用期間となります。
@@ -119,12 +119,12 @@ import Wovn from "@/components/Wovn.astro";
 試用期間中、ゲストユーザーは無料でゲストスペースを利用できます。  
 30日間の試用期間が終了すると、ライセンスは自動的に<Wovn>［試用］</Wovn>から<Wovn>［有料］</Wovn>に切り替わります。
 
-<Heading level={3} id="guest_confirm_guest_license_3020">&lt;Wovn&gt;［有料］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_license_3020"><Wovn>［有料］</Wovn></Heading>
 
 試用期間が経過した状態のライセンスです。  
 試用期間が終了したあとも、ゲストユーザーが<Kintone />を利用する場合、ゲストユーザーのライセンスが必要です。
 
-<Heading level={3} id="guest_confirm_guest_license_3030">&lt;Wovn&gt;［無料］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_license_3030"><Wovn>［無料］</Wovn></Heading>
 
 ゲストアカウントを<Kintone />アカウントと共通化した状態のライセンスです。  
 ゲストアカウントを<Kintone />アカウントと共通化すると、ゲストユーザーのライセンス利用料が無料になります。
