--- a/kintone-help-astro-poc/src/pages/ja/guest/manage/confirm_guest_list.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/guest/manage/confirm_guest_list.mdx
@@ -36,21 +36,21 @@ import Wovn from "@/components/Wovn.astro";
 <Wovn>［ゲストユーザー管理］</Wovn>画面の開き方は、次のページを参照してください。  
 [［ゲストユーザー管理］画面を開く](/k/ja/id/04035.html#guest_manage_guest_10)
 
-<Heading id="guest_confirm_guest_list_10">&lt;Wovn&gt;［ゲストユーザーの一覧］&lt;/Wovn&gt;の項目説明</Heading>
+<Heading id="guest_confirm_guest_list_10"><Wovn>［ゲストユーザーの一覧］</Wovn>の項目説明</Heading>
 
 招待中のゲストユーザーは、<Wovn>［ゲストユーザーの一覧］</Wovn>には表示されません。
 
-<Heading level={3} id="guest_confirm_guest_list_1010">&lt;Wovn&gt;［会社］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_list_1010"><Wovn>［会社］</Wovn></Heading>
 
 ゲストユーザーの<Wovn>［プロフィール］</Wovn>に設定されている<Wovn>［会社］</Wovn>が表示されます。  
 [ゲストの操作：プロフィールを編集する](/k/ja/id/040645.html)
 
-<Heading level={3} id="guest_confirm_guest_list_1020">&lt;Wovn&gt;［名前］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_list_1020"><Wovn>［名前］</Wovn></Heading>
 
 ゲストユーザーの<Wovn>［プロフィール］</Wovn>に設定されている<Wovn>［名前］</Wovn>が表示されます。  
 [ゲストの操作：プロフィールを編集する](/k/ja/id/040645.html)
 
-<Heading level={3} id="guest_confirm_guest_list_1030">&lt;Wovn&gt;［メールアドレス］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_list_1030"><Wovn>［メールアドレス］</Wovn></Heading>
 
 ゲストユーザーのメールアドレス（ログイン名）が表示されます。
 
@@ -61,7 +61,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Hint>
 
-<Heading level={3} id="guest_confirm_guest_list_1040">&lt;Wovn&gt;［ステータス］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_list_1040"><Wovn>［ステータス］</Wovn></Heading>
 
 ゲストユーザーのステータスが表示されます。  
 ゲストユーザーのステータスは、<Wovn>［使用中］</Wovn>と<Wovn>［停止中］</Wovn>の2種類です。  
@@ -70,16 +70,16 @@ import Wovn from "@/components/Wovn.astro";
 ステータスを変更する方法は、次のページを参照してください。  
 [ゲストユーザーのステータスを変更する](#guest_confirm_guest_list_30)
 
-<Heading level={3} id="guest_confirm_guest_list_1050">&lt;Wovn&gt;［最終ログイン日時］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_list_1050"><Wovn>［最終ログイン日時］</Wovn></Heading>
 
 ゲストユーザーが最後にログインした日時が表示されます。
 
-<Heading level={3} id="guest_confirm_guest_list_1060">&lt;Wovn&gt;［所属するゲストスペース］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_list_1060"><Wovn>［所属するゲストスペース］</Wovn></Heading>
 
 ゲストユーザーが所属しているゲストスペースが表示されます。  
 複数のゲストスペースに参加している場合は、最大4件まで表示されます。
 
-<Heading level={3} id="guest_confirm_guest_list_1070">&lt;Wovn&gt;［ライセンス］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_list_1070"><Wovn>［ライセンス］</Wovn></Heading>
 
 ゲストユーザーのライセンスの種類が表示されます。  
 ゲストユーザーのライセンスは、<Wovn>［試用］</Wovn>、<Wovn>［有料］</Wovn>、および<Wovn>［無料］</Wovn>の3種類です。
@@ -87,7 +87,7 @@ import Wovn from "@/components/Wovn.astro";
 ライセンスの詳細は、次のページを参照してください。  
 [ゲストユーザーのライセンスの違い](/k/ja/id/040330.html#guest_confirm_guest_license_30)
 
-<Heading level={3} id="guest_confirm_guest_list_1080">&lt;Wovn&gt;［試用期限］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_confirm_guest_list_1080"><Wovn>［試用期限］</Wovn></Heading>
 
 <Wovn>［ライセンス］</Wovn>が<Wovn>［試用］</Wovn>のゲストユーザーに、試用期限が表示されます。  
 ゲストユーザーの試用期間は、ゲストスペースに招待され、ゲストユーザーとしてはじめてログインした日から30日間です。
