--- a/kintone-help-astro-poc/src/pages/ja/guest/manage/guest_login_security.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/guest/manage/guest_login_security.mdx
@@ -21,7 +21,7 @@ import Wovn from "@/components/Wovn.astro";
 
 次の設定項目は、ゲストアカウントにも同じ設定が適用されます。
 
-<Heading level={3} id="guest_login_security_1010">&lt;Wovn&gt;［パスワード ポリシー］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_1010"><Wovn>［パスワード ポリシー］</Wovn></Heading>
 
 * <Wovn>［ユーザーパスワードの最小文字数］</Wovn>
 * <Wovn>［複雑さ］</Wovn>
@@ -29,7 +29,7 @@ import Wovn from "@/components/Wovn.astro";
 * <Wovn>［有効期間］</Wovn>
 * <Wovn>［過去に使用したパスワードの禁止］</Wovn>
 
-<Heading level={3} id="guest_login_security_1020">&lt;Wovn&gt;［ログインセッション］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_1020"><Wovn>［ログインセッション］</Wovn></Heading>
 
 * <Wovn>［有効期間］</Wovn>
 
@@ -55,11 +55,11 @@ import Wovn from "@/components/Wovn.astro";
 
 </Enabled>
 
-<Heading level={3} id="guest_login_security_210">&lt;Wovn&gt;［SAML認証］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_210"><Wovn>［SAML認証］</Wovn></Heading>
 
 <Wovn>［SAML認証］</Wovn>によるcybozu.comへのシングルサインオンができるのはユーザーアカウントのみです。
 
-<Heading level={3} id="guest_login_security_220">&lt;Wovn&gt;［2要素認証］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_220"><Wovn>［2要素認証］</Wovn></Heading>
 
 ゲストアカウントは<Wovn>［2要素認証］</Wovn>を利用できません。  
 
@@ -70,7 +70,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading level={3} id="guest_login_security_230">&lt;Wovn&gt;［パスワード ポリシー］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_230"><Wovn>［パスワード ポリシー］</Wovn></Heading>
 
 次の設定は、ゲストアカウントに適用されません。
 
@@ -81,21 +81,21 @@ import Wovn from "@/components/Wovn.astro";
 * <Wovn>［パスワードのリセット］</Wovn>  
   この設定を無効にしても、ゲストアカウントはパスワードをリセットできます。
 
-<Heading level={3} id="guest_login_security_240">&lt;Wovn&gt;［アカウントロックアウト］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_240"><Wovn>［アカウントロックアウト］</Wovn></Heading>
 
 ゲストアカウントがログイン失敗回数を超えてログインに失敗しても、そのアカウントはロックアウトされません。
 
-<Heading level={3} id="guest_login_security_250">&lt;Wovn&gt;［ログイン失敗時のメッセージ］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_250"><Wovn>［ログイン失敗時のメッセージ］</Wovn></Heading>
 
 この項目に設定した内容は、ゲストアカウントがログインに失敗した際に表示されません。
 
-<Heading level={3} id="guest_login_security_260">&lt;Wovn&gt;［ログインの簡略化］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_260"><Wovn>［ログインの簡略化］</Wovn></Heading>
 
 <Wovn>［ログインの簡略化］</Wovn>の設定は、ゲストアカウントに適用されません。
 
 <Enabled regions={["JP", "CN"]}>
 
-<Heading level={3} id="guest_login_security_270">&lt;Wovn&gt;［API利用時の認証］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="guest_login_security_270"><Wovn>［API利用時の認証］</Wovn></Heading>
 
 ゲストアカウントはセキュアアクセスを利用できないため、この設定はゲストアカウントに適用されません。
 
