--- a/kintone-help-astro-poc/src/pages/ja/guest/operation/guestuser_join.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/guest/operation/guestuser_join.mdx
@@ -20,7 +20,7 @@ import Wovn from "@/components/Wovn.astro";
 ゲストスペースに招待された場合、すでに<Kintone />を利用しているかどうかによって、参加方法が異なります。  
 また、ご利用の環境によって、画面の表示が異なる場合があります。
 
-<Heading id="guestspace_guestuser_join_10">ご自身の会社などで&lt;Kintone /&gt;を利用中の場合</Heading>
+<Heading id="guestspace_guestuser_join_10">ご自身の会社などで<Kintone />を利用中の場合</Heading>
 
 ご自身の会社などで利用している<Kintone />のアカウントを利用して、招待されたゲストスペースに参加します。  
 この操作によってアカウントが共通化され、ご自身の会社などで利用しているkintoneのトップページからゲストスペースを開くことができるようになります。  
@@ -62,7 +62,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading id="guestspace_guestuser_join_20">&lt;Kintone /&gt;を利用していない場合</Heading>
+<Heading id="guestspace_guestuser_join_20"><Kintone />を利用していない場合</Heading>
 
 1. 招待メールに記載されたリンクをクリックします。
 
