--- a/kintone-help-astro-poc/src/pages/ja/guest/operation/guestuser_linkaccount.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/guest/operation/guestuser_linkaccount.mdx
@@ -96,7 +96,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Reference>
 
-<Heading level={3} id="guestspace_guestuser_linkaccount_3030">参考：&lt;Kintone /&gt;のURLを確認する</Heading>
+<Heading level={3} id="guestspace_guestuser_linkaccount_3030">参考：<Kintone />のURLを確認する</Heading>
 
 <Kintone />のURLは、ご自身の会社などで利用中の<Kintone />にアクセスし、Webブラウザーのアドレスバーを見ることで確認できます。
 
