--- a/kintone-help-astro-poc/src/pages/ja/mobile_access/mobile_view.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/mobile_access/mobile_view.mdx
@@ -19,7 +19,7 @@ import Wovn from "@/components/Wovn.astro";
 [モバイル版でできないこと](/k/ja/id/040668.html#mobile_access_smartphone_30)  
 モバイル端末からPCと同様の操作を行いたい場合は、PC版に切り替えて利用できます。
 
-<Heading id="mobile_access_view_10">モバイル端末で&lt;Kintone /&gt;を利用する3つの方法</Heading>
+<Heading id="mobile_access_view_10">モバイル端末で<Kintone />を利用する3つの方法</Heading>
 
 モバイル端末で<Kintone />を利用する場合、次の3通りの方法があります。
 
