--- a/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/android/setting_manual_android.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/android/setting_manual_android.mdx
@@ -21,7 +21,7 @@ import Wovn from "@/components/Wovn.astro";
   
 このページでは、Android Chromeで<Kintone />を使う方法を説明します。
 
-<Heading id="android_setting_manual_10">Android Chromeで&lt;Kintone /&gt;にアクセスする手順</Heading>
+<Heading id="android_setting_manual_10">Android Chromeで<Kintone />にアクセスする手順</Heading>
 
 1. Android Chromeを開きます。
 
