--- a/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/ios/mobileapp_ios.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/ios/mobileapp_ios.mdx
@@ -101,7 +101,7 @@ iOS端末で、モバイルアプリをアップデートします。
 
 SSOで使用しているサービスのログイン名とパスワードを入力し、ログインします。
 
-<Heading level={3} id="ios_mobileapp_ios_2030">&lt;Kintone /&gt;のログイン名とパスワードを使ってログインする場合</Heading>
+<Heading level={3} id="ios_mobileapp_ios_2030"><Kintone />のログイン名とパスワードを使ってログインする場合</Heading>
 
 1. <Kintone />にアクセスするログイン名とパスワードを入力し、<Wovn>［ログイン］</Wovn>をタップします。
    <Img src="/k/kintone/img-ja/mobileapp_ios02.png" alt="スクリーンショット：ログイン名とパスワードを入力する画面" />
