--- a/kintone-help-astro-poc/src/pages/ja/notifications/app/add_field_oftheform.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/notifications/app/add_field_oftheform.mdx
@@ -37,7 +37,7 @@ import Wovn from "@/components/Wovn.astro";
 <Wovn>［フォームのフィールドを追加］</Wovn>から<Wovn>［作業者］</Wovn>を選択します。  
 <Img src="/k/kintone/img-ja/add_field_oftheform_01.png" alt="スクリーンショット：［作業者］を通知先に指定している" />
 
-<Heading id="notification_add_field_oftheform_30">通知先に&lt;Wovn&gt;［ユーザー選択］&lt;/Wovn&gt;・&lt;Wovn&gt;［組織選択］&lt;/Wovn&gt;・&lt;Wovn&gt;［グループ選択］&lt;/Wovn&gt;フィールドを指定する</Heading>
+<Heading id="notification_add_field_oftheform_30">通知先に<Wovn>［ユーザー選択］</Wovn>・<Wovn>［組織選択］</Wovn>・<Wovn>［グループ選択］</Wovn>フィールドを指定する</Heading>
 
 アプリのフォームに配置したフィールドを、<Wovn>［フォームのフィールドを追加］</Wovn>に指定できます。  
 通知先に指定すると、レコードごとに選択されたユーザーや組織などに対して通知できます。  
@@ -50,7 +50,7 @@ import Wovn from "@/components/Wovn.astro";
 <Wovn>［組織選択］</Wovn>フィールドを指定した場合は、フィールド名の下に<Wovn>［下位組織に通知する］</Wovn>のチェックボックスが表示されます。<Wovn></Wovn>  
 チェックを入れると、組織に所属する下位の組織にも通知が送信されます。
 
-<Heading level={3} id="notification_add_field_oftheform_3010">例：アプリの条件通知で、対応担当者（&lt;Wovn&gt;［ユーザー選択］&lt;/Wovn&gt;フィールド）に設定されたユーザーへ通知するように設定する</Heading>
+<Heading level={3} id="notification_add_field_oftheform_3010">例：アプリの条件通知で、対応担当者（<Wovn>［ユーザー選択］</Wovn>フィールド）に設定されたユーザーへ通知するように設定する</Heading>
 
 <Wovn>［フォームのフィールドを追加］</Wovn>から「対応担当者」を選択します。  
 <Img src="/k/kintone/img-ja/add_field_oftheform_02.png" alt="スクリーンショット：「対応担当者」を通知先に指定している" />
