--- a/kintone-help-astro-poc/src/pages/ja/notifications/mail/activate_mail_notifications.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/notifications/mail/activate_mail_notifications.mdx
@@ -80,7 +80,7 @@ import Wovn from "@/components/Wovn.astro";
 
 各設定項目の詳細について以下に説明します。
 
-<Heading level={3} id="admin_feature_activ_1010">&lt;Wovn&gt;［受信設定の既定値］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="admin_feature_activ_1010"><Wovn>［受信設定の既定値］</Wovn></Heading>
 
 ユーザーがメール通知を受信するかどうかの既定値を設定できます。  
 受信設定の既定値を変更したとき、ユーザーによって適用されるかどうかが異なります。
@@ -108,7 +108,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading level={3} id="admin_feature_activ_1020">&lt;Wovn&gt;［メール通知の形式］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="admin_feature_activ_1020"><Wovn>［メール通知の形式］</Wovn></Heading>
 
 ユーザーが受信するメール通知を、HTML形式／テキスト形式のどちらにするか設定できます。<Wovn></Wovn><Wovn></Wovn>  
 メール通知の形式を変更したとき、ユーザーによって適用されるかどうかが異なります。
@@ -136,7 +136,7 @@ HTML形式のメール通知の例：
 
 </Note>
 
-<Heading level={3} id="admin_feature_activ_1030">&lt;Wovn&gt;［その他の設定］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="admin_feature_activ_1030"><Wovn>［その他の設定］</Wovn></Heading>
 
 REST APIを使って<Kintone />を操作した場合にメールで通知するかどうかを設定できます。  
 初期値は無効になっています。  
