--- a/kintone-help-astro-poc/src/pages/ja/notifications/mail/mail_notification.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/notifications/mail/mail_notification.mdx
@@ -56,7 +56,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Enabled>
 
-<Heading level={3} id="notifications_mail_notification_1010">ユーザーのメールアドレスを設定する（&lt;Slash /&gt;共通管理者または各ユーザー）</Heading>
+<Heading level={3} id="notifications_mail_notification_1010">ユーザーのメールアドレスを設定する（<Slash />共通管理者または各ユーザー）</Heading>
 
 <Slash />共通管理者が、メール通知を受信するユーザーのユーザー情報に、メールアドレスを設定します。  
 [ユーザー情報を変更する](/general/ja/id/020234.html)（<SlashHelp />）
@@ -64,7 +64,7 @@ import Wovn from "@/components/Wovn.astro";
 メールアドレスの変更が許可されている場合は、ユーザーが自分のプロフィールを編集して、メールアドレスを設定することも可能です。  
 [プロフィールを変更する](/general/ja/id/020412.html)（<SlashHelp />）
 
-<Heading level={3} id="notifications_mail_notification_1020">メール通知機能を有効にする（&lt;Kintone /&gt;システム管理者）</Heading>
+<Heading level={3} id="notifications_mail_notification_1020">メール通知機能を有効にする（<Kintone />システム管理者）</Heading>
 
 <Kintone />システム管理者が、メール通知機能を有効にします。
 
