--- a/kintone-help-astro-poc/src/pages/ja/notifications/usage/notification_tutorial.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/notifications/usage/notification_tutorial.mdx
@@ -38,7 +38,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading level={3} id="notifications_notification_tutoria_1020">&lt;Wovn&gt;［通知］&lt;/Wovn&gt;画面で通知を確認する</Heading>
+<Heading level={3} id="notifications_notification_tutoria_1020"><Wovn>［通知］</Wovn>画面で通知を確認する</Heading>
 
 <Kintone />の画面上部のベルの形をした<Wovn>［通知一覧］</Wovn>アイコンをクリックすると、通知の一覧が表示されます。<Wovn></Wovn>  
 また、「自分宛」の通知を受信すると、<Wovn>［通知一覧］</Wovn>アイコンに受信した通知の数が表示されます。<Wovn></Wovn>  
