--- a/kintone-help-astro-poc/src/pages/ja/notifications/usage/set_desktop_notification.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/notifications/usage/set_desktop_notification.mdx
@@ -55,7 +55,7 @@ import Wovn from "@/components/Wovn.astro";
 
    </Note>
 
-<Heading level={3} id="notifications_set_desktop_notification_1020">&lt;Kintone /&gt;での設定</Heading>
+<Heading level={3} id="notifications_set_desktop_notification_1020"><Kintone />での設定</Heading>
 
 1. <Kintone />の画面上部の歯車の形をした<Wovn>［設定］</Wovn>アイコンをクリックし、<Wovn>［個人設定］</Wovn>をクリックします。<Wovn></Wovn>  
    <Img src="/k/kintone/img-ja/set_desktop_notification_02.png" alt="スクリーンショット：画面上部の［設定］アイコンと[個人設定]を枠線で強調している" />
