--- a/kintone-help-astro-poc/src/pages/ja/option/email/m_list_setup/index.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/option/email/m_list_setup/index.mdx
@@ -28,7 +28,7 @@ import SlashUi from "@/components/SlashUi.astro";
 
 </Listsummary>
 
-<Heading id="m_list_setup_index_50">&lt;SlashUi /&gt;で利用ユーザーを設定する</Heading>
+<Heading id="m_list_setup_index_50"><SlashUi />で利用ユーザーを設定する</Heading>
 
 試用の申し込み後に届くメールに記載されたURLにアクセスして、<Service />にログインします。  
 <SlashUi />画面で、メール共有オプションの利用を許可するユーザーを設定します。詳細は、次のページを参照してください。  
@@ -49,7 +49,7 @@ import SlashUi from "@/components/SlashUi.astro";
 必要に応じて、メール共有オプションのシステム管理者と運用管理者を設定します。詳細は、次のページを参照してください。  
 [メール共有オプションの管理者を設定する](/k/ja/id/040916.html)
 
-<Heading id="m_list_setup_index_20">&lt;Kintone /&gt;と連携する</Heading>
+<Heading id="m_list_setup_index_20"><Kintone />と連携する</Heading>
 
 <Kintone />と連携して、顧客情報や対応履歴を<Kintone />アプリで一元管理できるようにします。詳細は、次のページを参照してください。  
 [<Kintone />連携](/k/ja/id/040902.html)
