--- a/kintone-help-astro-poc/src/pages/ja/option/email/m_list_user/m_administrator.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/option/email/m_list_user/m_administrator.mdx
@@ -26,7 +26,7 @@ import Slash from "@/components/Slash.astro";
 * **運用管理者**：  
   メール共有オプションの各機能の設定を変更できる人です。システム管理者が、メール共有オプションの利用ユーザーの中から運用管理者を選択します。
 
-<Heading id="m_list_user_m_administrator_20">&lt;Slash /&gt;共通管理者およびシステム管理者を設定する</Heading>
+<Heading id="m_list_user_m_administrator_20"><Slash />共通管理者およびシステム管理者を設定する</Heading>
 
 <Slash />共通管理者およびシステム管理者を設定する方法は、次のページを参照してください。  
 [<Slash />共通管理者を変更する](/general/ja/id/0208.html)
