--- a/kintone-help-astro-poc/src/pages/ja/option/email/m_list_user/m_user.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/option/email/m_list_user/m_user.mdx
@@ -19,7 +19,7 @@ import SlashUi from "@/components/SlashUi.astro";
 
 メール共有オプションの利用ユーザーを設定する方法を説明します。
 
-<Heading id="m_list_user_m_user_10">&lt;SlashUi /&gt;で利用ユーザーを設定する</Heading>
+<Heading id="m_list_user_m_user_10"><SlashUi />で利用ユーザーを設定する</Heading>
 
 <SlashUi />で、メール共有オプションの利用を許可するユーザーを設定します。  
 メール共有オプションを利用するユーザーには、<Kintone />とメール共有オプションの両方の利用が許可されている必要があります。
