--- a/kintone-help-astro-poc/src/pages/ja/search/search_details.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/search/search_details.mdx
@@ -91,7 +91,7 @@ import Wovn from "@/components/Wovn.astro";
 タイトル検索では、名前にキーワードを含むアプリ、スペース、スレッド、およびピープルをそれぞれ表示します。  
 なお、検索範囲や絞り込みの内容はタイトル検索の結果に反映されません。
 
-<Heading level={5} id="search_search_details_20501010">&lt;Wovn&gt;［タイトルにキーワードを含むアプリ］&lt;/Wovn&gt;に表示される項目</Heading>
+<Heading level={5} id="search_search_details_20501010"><Wovn>［タイトルにキーワードを含むアプリ］</Wovn>に表示される項目</Heading>
 
 * アプリのアイコン
 * アプリの名前
@@ -104,18 +104,18 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading level={5} id="search_search_details_20501020">&lt;Wovn&gt;［タイトルにキーワードを含むスペース］&lt;/Wovn&gt;に表示される項目</Heading>
+<Heading level={5} id="search_search_details_20501020"><Wovn>［タイトルにキーワードを含むスペース］</Wovn>に表示される項目</Heading>
 
 * スペースのカバー画像
 * スペース名
 
-<Heading level={5} id="search_search_details_20501030">&lt;Wovn&gt;［タイトルにキーワードを含むスレッド］&lt;/Wovn&gt;に表示される項目</Heading>
+<Heading level={5} id="search_search_details_20501030"><Wovn>［タイトルにキーワードを含むスレッド］</Wovn>に表示される項目</Heading>
 
 * スレッドのタイトル
 * スレッドが所属するスペースのカバー画像
 * スレッドが所属するスペース名
 
-<Heading level={5} id="search_search_details_20501040">&lt;Wovn&gt;［タイトルにキーワードを含むピープル］&lt;/Wovn&gt;に表示される項目</Heading>
+<Heading level={5} id="search_search_details_20501040"><Wovn>［タイトルにキーワードを含むピープル］</Wovn>に表示される項目</Heading>
 
 * プロフィール写真
 * ユーザーの表示名
