--- a/kintone-help-astro-poc/src/pages/ja/space/basic/add_space.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/space/basic/add_space.mdx
@@ -88,16 +88,16 @@ import Wovn from "@/components/Wovn.astro";
 
 <Heading id="space_add_space_40">スペースの設定項目</Heading>
 
-<Heading level={3} id="space_add_space_4010">&lt;Wovn&gt;［スペース名］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="space_add_space_4010"><Wovn>［スペース名］</Wovn></Heading>
 
 スペースの名前を入力します。
 
-<Heading level={3} id="space_add_space_4020">&lt;Wovn&gt;［参加メンバーだけにこのスペースを公開する］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="space_add_space_4020"><Wovn>［参加メンバーだけにこのスペースを公開する］</Wovn></Heading>
 
 スペースを公開するかどうかを設定します。  
 チェックを入れると、参加者以外のユーザーにはスペースは公開されません。
 
-<Heading level={3} id="space_add_space_4030">&lt;Wovn&gt;［スペースのポータルと複数のスレッドを使用する］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="space_add_space_4030"><Wovn>［スペースのポータルと複数のスレッドを使用する］</Wovn></Heading>
 
 チェックを入れると、スペース内に複数のスレッドを作成できます。スペースを開いたときは、スペースのポータル画面が表示されます。  
 <Img src="/k/kintone/img-ja/add_space_02.png" alt="スクリーンショット：複数スレッドのスペース" />
@@ -108,7 +108,7 @@ import Wovn from "@/components/Wovn.astro";
 ただし、1つのスレッドのみを使用できるスペースへの変更はできません。  
 [スペースの設定を変更する](/k/ja/id/040696.html)
 
-<Heading level={3} id="space_add_space_4040">&lt;Wovn&gt;［スペースの参加/退会、スレッドのフォロー/フォロー解除を禁止する］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="space_add_space_4040"><Wovn>［スペースの参加/退会、スレッドのフォロー/フォロー解除を禁止する］</Wovn></Heading>
 
 スペースへの参加／退会、およびスレッドのフォロー／フォロー解除の操作を禁止するかどうかを設定します。  
 チェックを入れると、スペースの参加メンバーに対して、スペースからの退会と、スレッドのフォローの解除が禁止されます。  
@@ -117,12 +117,12 @@ import Wovn from "@/components/Wovn.astro";
 * [スペースに参加／退会する](/k/ja/id/040701.html)
 * [スレッドをフォローする／フォローを解除する](/k/ja/id/040700.html)
 
-<Heading level={3} id="space_add_space_4050">&lt;Wovn&gt;［アプリ作成できるユーザーをスペースの管理者に限定する］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="space_add_space_4050"><Wovn>［アプリ作成できるユーザーをスペースの管理者に限定する］</Wovn></Heading>
 
 このスペースにアプリを作成できるユーザーを、スペースの管理者に限定するかどうかを設定します。
 スペースの管理者は、<Wovn>［参加メンバー］</Wovn>タブで設定します。<Wovn></Wovn>
 
-<Heading level={3} id="space_add_space_4060">&lt;Wovn&gt;［カバー画像］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="space_add_space_4060"><Wovn>［カバー画像］</Wovn></Heading>
 
 スペースのカバー画像を指定します。  
 <Kintone />に登録されている画像を選択するか、<Wovn>［参照］</Wovn>から任意の画像を選択します。  
