--- a/kintone-help-astro-poc/src/pages/ja/space/customize/whats_threadaction.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/space/customize/whats_threadaction.mdx
@@ -45,25 +45,25 @@ import Wovn from "@/components/Wovn.astro";
 
 転記するデータの種類によって、コピー先に指定できるフィールドが異なります。
 
-<Heading level={3} id="thredaction_whats_threadaction_1010">&lt;Wovn&gt;［コメントの内容］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="thredaction_whats_threadaction_1010"><Wovn>［コメントの内容］</Wovn></Heading>
 
 次のフィールドを<Wovn>［コメントの内容］</Wovn>のコピー先に指定できます。
 
 * <Wovn>［文字列（複数行）］</Wovn>
 * <Wovn>［リッチエディター］</Wovn>
 
-<Heading level={3} id="thredaction_whats_threadaction_1020">&lt;Wovn&gt;［コメントの投稿日時］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="thredaction_whats_threadaction_1020"><Wovn>［コメントの投稿日時］</Wovn></Heading>
 
 次のフィールドを<Wovn>［コメントの投稿日時］</Wovn>のコピー先に指定できます。
 
 * <Wovn>［日時］</Wovn>
 * <Wovn>［日付］</Wovn>
 
-<Heading level={3} id="thredaction_whats_threadaction_1030">&lt;Wovn&gt;［コメントの投稿者］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="thredaction_whats_threadaction_1030"><Wovn>［コメントの投稿者］</Wovn></Heading>
 
 ユーザー選択フィールドを、<Wovn>［コメントの投稿者］</Wovn>のコピー先に指定できます。
 
-<Heading level={3} id="thredaction_whats_threadaction_1040">&lt;Wovn&gt;［コメントのURL］&lt;/Wovn&gt;</Heading>
+<Heading level={3} id="thredaction_whats_threadaction_1040"><Wovn>［コメントのURL］</Wovn></Heading>
 
 <Wovn>［リンク］</Wovn>フィールドを、<Wovn>［コメントのURL］</Wovn>のコピー先に指定できます。ただし、<Wovn>［リンク］</Wovn>フィールドの設定で、入力値の種類を<Wovn>［Webサイトのアドレス］</Wovn>にしている場合に限ります。
 
