--- a/kintone-help-astro-poc/src/pages/ja/space/delete_restore/delete_space.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/space/delete_restore/delete_space.mdx
@@ -43,7 +43,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading id="space_delete_space10">&lt;Wovn&gt;［オプション］&lt;/Wovn&gt;メニューから削除する</Heading>
+<Heading id="space_delete_space10"><Wovn>［オプション］</Wovn>メニューから削除する</Heading>
 
 1. 削除するスペースを開きます。
 
