--- a/kintone-help-astro-poc/src/pages/ja/space/space_admin/manage_spaces.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/space/space_admin/manage_spaces.mdx
@@ -42,7 +42,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Note>
 
-<Heading id="space_admin_manage_spaces_10">&lt;Wovn&gt;［スペース管理］&lt;/Wovn&gt;画面を開く</Heading>
+<Heading id="space_admin_manage_spaces_10"><Wovn>［スペース管理］</Wovn>画面を開く</Heading>
 
 1. <Kintone />の画面上部の歯車の形をした<Wovn>［設定］</Wovn>アイコンをクリックし、<Wovn>［<Kintone />システム管理］</Wovn>をクリックします。  
    <Img src="/k/kintone/img-ja/manage_spaces_01.png" alt="スクリーンショット：ポータルの画面" />
