--- a/kintone-help-astro-poc/src/pages/ja/start/departments_users/invite_team_members.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/departments_users/invite_team_members.mdx
@@ -37,7 +37,7 @@ import Wovn from "@/components/Wovn.astro";
 
 </Enabled>
 
-<Heading id="departments_users_invite_team_members_10">&lt;Wovn&gt;［&lt;Kintone /&gt;へようこそ！］&lt;/Wovn&gt;ダイアログから招待機能を利用する</Heading>
+<Heading id="departments_users_invite_team_members_10"><Wovn>［<Kintone />へようこそ！］</Wovn>ダイアログから招待機能を利用する</Heading>
 
 無料お試しを申し込み後にはじめて<Kintone />にログインすると、<Wovn>［<Kintone />へようこそ！］</Wovn>ダイアログが表示されます。招待機能は、このようこそダイアログから利用できます。
 
