--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/app_qa/number_apps.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/app_qa/number_apps.mdx
@@ -18,7 +18,7 @@ import SlashUi from "@/components/SlashUi.astro";
 アプリ数は、<Kintone />のアプリ管理画面または<SlashUi />画面で確認できます。  
 なお、<SlashUi />画面から確認できるのは、<Slash />共通管理者のみです。
 
-<Heading id="app_qa_number_apps_10">&lt;Kintone /&gt;のアプリ管理画面で確認する</Heading>
+<Heading id="app_qa_number_apps_10"><Kintone />のアプリ管理画面で確認する</Heading>
 
 1. <Kintone />の画面上部の歯車の形をした[設定]アイコンをクリックし、[アプリ管理]をクリックします。
    <Img src="/k/kintone/img-ja/manage_apps_img01.png" alt=" " />
@@ -33,7 +33,7 @@ import SlashUi from "@/components/SlashUi.astro";
    * <Kintone />システム管理者、そのほかのユーザー：アプリ管理権限のあるすべてのアプリ
   </Hint> 
 
-<Heading id="app_qa_number_apps_20">&lt;SlashUi /&gt;画面で確認する</Heading>
+<Heading id="app_qa_number_apps_20"><SlashUi />画面で確認する</Heading>
 
 1. <Kintone />の画面上部の歯車の形をした[設定]アイコンをクリックし、[<SlashUi />]をクリックします。
    <Img src="/k/kintone/img-ja/restore_app_img01.png" alt="画像" />
