--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/disable_plugin_customization.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/disable_plugin_customization.mdx
@@ -51,7 +51,7 @@ JavaScript/CSSによるカスタマイズを無効にするには、アプリご
 再度有効にする場合は、次のページを参照してください。  
 [JavaScript/CSSファイルを取り込む](/k/ja/id/040556.html#app_settings_js_customize_10)
 
-<Heading id="general_disable_plugin_customization_30">&lt;Kintone /&gt;全体でカスタマイズを無効にする</Heading>
+<Heading id="general_disable_plugin_customization_30"><Kintone />全体でカスタマイズを無効にする</Heading>
 
 <Wovn>［<Kintone />システム管理］</Wovn>の<Wovn>［JavaScript / CSSでカスタマイズ］</Wovn>画面で、<Kintone />全体のカスタマイズを無効にできます。  
 設定を変更するには、<Kintone />のシステム管理権限が必要です。
