--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/usage_status.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/general/usage_status.mdx
@@ -42,7 +42,7 @@ import Wovn from "@/components/Wovn.astro";
 なお、上限数は契約コースによって異なります。
 <Img src="/k/kintone/img-ja/usage_status_04.png" alt="［スペース管理］画面の［ライセンス使用状況］で、［スペース数］と［ゲストスペース数］の上限数と使用中の数が枠線で強調されている" />
 
-<Heading id="general_usage_status_30">&lt;Kintone /&gt;全体へのJavaScript/CSS適用状況の確認方法</Heading>
+<Heading id="general_usage_status_30"><Kintone />全体へのJavaScript/CSS適用状況の確認方法</Heading>
 
 <Wovn>［<Kintone />システム管理］</Wovn>画面の<Wovn>［JavaScript / CSSでカスタマイズ］</Wovn>を開きます。  
 <Img src="/k/kintone/img-ja/usage_status_05.png" alt="スクリーンショット：［{{&lt; kintone &gt;}}システム管理］画面で［JavaScript/CSSでカスタマイズ］が枠線で強調されている" />
