--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/guest/link_account_login.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/guest/link_account_login.mdx
@@ -22,7 +22,7 @@ import Reference from "@/components/Reference.astro";
 
 はじめに「[<Kintone />アカウントでログインを試す](#guest_link_account_login_10)」の方法をお試しください。それでもアクセスできない場合には、ユーザーのアカウント停止や削除などが行われていないか確認のうえで「[ゲストユーザーとして再度招待してもらう](#guest_link_account_login_20)」を参照してください。
 
-<Heading id="guest_link_account_login_10">&lt;Kintone /&gt;アカウントでログインを試す</Heading>
+<Heading id="guest_link_account_login_10"><Kintone />アカウントでログインを試す</Heading>
 
 1. ゲストユーザーのログイン画面で、「<Kintone />アカウントでログイン」をクリックします。
    <Img src="/k/kintone/img-ja/link_account_login01.png" alt="{{&lt; kintone &gt;}}アカウントでログイン" />
