--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/mobile/error_ios.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/mobile/error_ios.mdx
@@ -78,7 +78,7 @@ IPアドレス制限によって、アクセスが制限されている場合に
 エラーの表示例：
 <Img src="/k/kintone/img-ja/error02.png" alt="スクリーンショット：「現在のIPアドレスからkintoneにアクセスできません」というエラーが表示されている" />
 
-<Heading level={3} id="mobile_error_ios_2010">「現在のIPアドレスから&lt;Kintone /&gt;にアクセスできません」というエラーが表示される</Heading>
+<Heading level={3} id="mobile_error_ios_2010">「現在のIPアドレスから<Kintone />にアクセスできません」というエラーが表示される</Heading>
 
 次のエラーメッセージが表示されます。
 
