--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/notification_qa/notification_faq.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/notification_qa/notification_faq.mdx
@@ -75,7 +75,7 @@ import Slash from "@/components/Slash.astro";
 
 </Hint>
 
-<Heading id="notification_qa_notification_faq_20">&lt;Kintone /&gt;のポータルにも通知が届いていない</Heading>
+<Heading id="notification_qa_notification_faq_20"><Kintone />のポータルにも通知が届いていない</Heading>
 
 <Kintone />のポータルにも通知が届いていない場合、メール通知も届きません。  
 [「通知」が届かないときは](/k/ja/id/040376.html)
