--- a/kintone-help-astro-poc/src/pages/ja/trouble_shooting/space_qa/space_number.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/trouble_shooting/space_qa/space_number.mdx
@@ -24,7 +24,7 @@ import SlashUi from "@/components/SlashUi.astro";
 
 </Disabled2>
 
-<Heading id="space_qa_space_number_10">&lt;Kintone /&gt;システム管理画面から確認する</Heading>
+<Heading id="space_qa_space_number_10"><Kintone />システム管理画面から確認する</Heading>
 
 <Kintone />の画面上部の歯車の形をした[設定]アイコンをクリックし、[<Kintone />システム管理]をクリックします。  
 <Img src="/k/kintone/img-ja/space_number_01.png" alt="ポータルの画面" />  
@@ -37,7 +37,7 @@ import SlashUi from "@/components/SlashUi.astro";
 
 <Disabled2 regions={["US"]}>
 
-<Heading id="space_qa_space_number_20">&lt;SlashUi /&gt;画面から確認する</Heading>
+<Heading id="space_qa_space_number_20"><SlashUi />画面から確認する</Heading>
 
 管理者権限を持つユーザーで、<SlashUi />画面を開きます。
 <Img src="/k/kintone/img-ja/confirm_companycode_domain_02.gif" alt="{{&lt; slash_ui &gt;}}画面" />
