--- a/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/permissions/feature_activation.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/admin/permission_admin/permissions/feature_activation.mdx
@@ -20,7 +20,7 @@ import Wovn from "@/components/Wovn.astro";
 <Wovn>［利用する機能の選択］</Wovn>画面では、一部の機能を無効化および再有効化できます。  
 また、通知メールの設定を行うことができます。
 
-<Heading id="admin_feature_activation_10">&lt;Wovn&gt;［利用する機能の選択］&lt;/Wovn&gt;画面を開く</Heading>
+<Heading id="admin_feature_activation_10"><Wovn>［利用する機能の選択］</Wovn>画面を開く</Heading>
 
 <Wovn>［利用する機能の選択］</Wovn>画面を開くことができるのは、<Kintone />システム管理者および<Service />共通管理者です。
 
@@ -42,14 +42,14 @@ import Wovn from "@/components/Wovn.astro";
 <Wovn>［利用する機能の選択］</Wovn>画面が開きます。  
 それぞれの設定項目の概要を以下に説明します。
 
-<Heading id="admin_feature_activation_20">&lt;Wovn&gt;［通知のメール送信］&lt;/Wovn&gt;の設定</Heading>
+<Heading id="admin_feature_activation_20"><Wovn>［通知のメール送信］</Wovn>の設定</Heading>
 
 通知のメール送信機能とは、<Kintone />の通知をメールで送信する機能のことです。<Kintone />上の通知に加えて、メールでも通知内容を確認できます。  
 初期設定では有効になっており、自分宛の通知がHTML形式のメールで送信されます。  
 各設定項目の詳細は、次のページを参照してください。  
 [通知のメール送信機能の利用設定](/k/ja/id/0403.html)
 
-<Heading id="admin_feature_activation_30">&lt;Wovn&gt;［スペースとピープル］&lt;/Wovn&gt;の利用設定</Heading>
+<Heading id="admin_feature_activation_30"><Wovn>［スペースとピープル］</Wovn>の利用設定</Heading>
 
 <Enabled regions={["JP", "US"]}>
 
@@ -128,7 +128,7 @@ import Wovn from "@/components/Wovn.astro";
   [もっと多くの人にアプリを作成してもらいたい場合に](/k/ja/id/040762.html)
 </Hint>
 
-<Heading level={3} id="admin_feature_activation_3020">参考：&lt;Wovn&gt;［スペースに所属しないアプリの作成を許可する］&lt;/Wovn&gt;を無効にした場合のアプリグループ</Heading>
+<Heading level={3} id="admin_feature_activation_3020">参考：<Wovn>［スペースに所属しないアプリの作成を許可する］</Wovn>を無効にした場合のアプリグループ</Heading>
 
 アプリは、必ずいずれかのアプリグループが設定されています。アプリ作成時は<Wovn>［デフォルトのアプリグループ］</Wovn>で設定しているアプリグループが選択されますが、ほかのアプリグループに変更することも可能です。ただし、スペースに所属するアプリ（スペース内アプリ）は必ず<Wovn>［Public］</Wovn>というアプリグループとなり、変更できません。
 
