--- a/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/android/mobileapp_android.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/android/mobileapp_android.mdx
@@ -85,7 +85,7 @@ Android端末で、モバイルアプリをアップデートします。
 
 1. SSOで使用しているサービスのログイン名とパスワードを入力し、ログインします。
 
-<Heading level={3} id="android_mobileapp_android_2030">&lt;Kintone /&gt;のログイン名とパスワードを使ってログインする場合</Heading>
+<Heading level={3} id="android_mobileapp_android_2030"><Kintone />のログイン名とパスワードを使ってログインする場合</Heading>
 
 1. <Kintone />にアクセスするログイン名とパスワードを入力し、<Wovn>［ログイン］</Wovn>をタップします。  
    <Img src="/k/kintone/img-ja/mobileapp_android_03.png" alt="スクリーンショット：ログイン名とパスワードを入力する画面" />
