--- a/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/ios/setting_manual_ios.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/mobile_access/smartphone/ios/setting_manual_ios.mdx
@@ -22,7 +22,7 @@ import Wovn from "@/components/Wovn.astro";
 このページでは、iPhoneのSafariで<Kintone />を使う方法を説明します。  
 iPadも同様の手順で<Kintone />を開けますが、表示される画面はPCと同様になります。
 
-<Heading id="ios_setting_manual_10">iOS Safariで&lt;Kintone /&gt;にアクセスする手順</Heading>
+<Heading id="ios_setting_manual_10">iOS Safariで<Kintone />にアクセスする手順</Heading>
 
 1. iOS Safariを開きます。
 
