--- a/kintone-help-astro-poc/src/pages/ja/start/more_information.mdx
+++ b/kintone-help-astro-poc/src/pages/ja/start/more_information.mdx
@@ -14,7 +14,7 @@ import Kintone from "@/components/Kintone.astro";
 アプリの作成や設定の手順だけでなく、<Kintone />を活用するためのヒントを用意しています。  
 業種ごとにどんなアプリが作られているか、チームで<Kintone />をどのように活用しているかを知りたいときは、次のコンテンツを参照してください。
 
-<Heading id="more_information_10">&lt;Kintone /&gt;の導入事例集</Heading>
+<Heading id="more_information_10"><Kintone />の導入事例集</Heading>
 
 さまざまな業務で使われている<Kintone />の導入事例集です。  
 部署別、用途ごとに、導入事例を紹介しています。  
@@ -22,7 +22,7 @@ import Kintone from "@/components/Kintone.astro";
 [部署別の使い方](https://kintone.cybozu.co.jp/jobtype/)  
 [用途別の使い方](https://kintone.cybozu.co.jp/purpose/)  
 
-<Heading id="more_information_20">&lt;Kintone /&gt;の歩き方</Heading>
+<Heading id="more_information_20"><Kintone />の歩き方</Heading>
 
 <Kintone />を導入してから1年の間に、知ってほしい情報を楽しく学べるコンテンツです。  
 <Kintone />の活用や社内への浸透のコツ、つまずきやすいポイントなどを紹介しています。  
